--- a/InCallUI/res/values-bn-rBD/strings.xml
+++ b/InCallUI/res/values-bn-rBD/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"অজানা"</string>
     <string name="private_num" msgid="6713286113000232309">"ব্যক্তিগত নম্বর"</string>
     <string name="payphone" msgid="1931775086311769314">"অর্থের বিনিময়ে কল করার ফোন"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"লাইন ব্যস্ত"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"নেটওয়ার্ক ব্যস্ত"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"কোনো প্রতিক্রিয়া নেই, সময় শেষ হয়ে গেছে"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"সার্ভারে পৌঁছানো যাচ্ছে না"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"নম্বরটিতে সংযোগ স্থাপন করা যাচ্ছে না"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ভুল ব্যবহারকারীর নাম বা পাসওয়ার্ড"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"নেটওয়ার্কের বাইরে থেকে কল করা হয়েছে"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"সার্ভার ত্রুটি৷ পরে আবার চেষ্টা করুন৷"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"কোনো সংকেত নেই"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM এর সীমা অতিক্রম করেছে"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"রেডিও বন্ধ"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"কোনো SIM নেই বা SIM ত্রুটি"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"মোবাইল নেটওয়ার্ক অনুপলব্ধ"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN এর দ্বারা আউটগোয়িং কলগুলি সীমাবদ্ধ করা আছে৷"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"কল প্রতিবন্ধকতা চালু থাকা অবস্থায় আপনি আউটগোয়িং কল করতে পারবেন না৷"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"অ্যাক্সেস নিয়ন্ত্রণের দ্বারা সমস্ত কল সীমাবদ্ধ করা আছে৷"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"অ্যাক্সেস নিয়ন্ত্রণের দ্বারা জরুরি কলগুলি সীমাবদ্ধ করা আছে৷"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"অ্যাক্সেস নিয়ন্ত্রণের দ্বারা সাধারণ কলগুলি সীমাবদ্ধ করা আছে৷"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"অবৈধ নম্বর"</string>
     <string name="confCall" msgid="1904840547188336828">"কনফারেন্স কল"</string>
     <string name="call_lost" msgid="317670617901479594">"কলের সংযোগ বিচ্ছিন্ন হয়ে গেছে৷"</string>
     <string name="ok" msgid="3811371167865772377">"ঠিক আছে"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"কল নামিয়ে রাখা হচ্ছে"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"কল চলছে"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"আমার নম্বর হল <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"ভিডিও সংযুক্ত করছে"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"ভিডিও কল"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ভিডিওর অনুরোধ করছে"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"ভিডিও কল সংযুক্ত করতে পারছে না"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"আপনার কল-ব্যাক নম্বর\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"আপনার জরুরী কল-ব্যাক নম্বর\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"ডায়াল করা হচ্ছে"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"মিসড কল"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"মিসড কলগুলি"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"চালু থাকা কল"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"সাময়িকভাবে স্থগিত রাখা হয়েছে"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ইনকামিং কল"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ইনকামিং ভিডিও কল"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"আগত ভিডিও অনুরোধ"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"নতুন ভয়েসমেল"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"নতুন ভয়েসমেল (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> এ ডায়াল করুন"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"কোনো পরিষেবা নেই"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"নির্বাচিত নেটওয়ার্ক (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) অনুপলব্ধ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"কল নামিয়ে রাখুন"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"ভিডিও"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"ভয়েস"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"স্বীকার করুন"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"খারিজ করুন"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"কল ব্যাক করুন"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"বার্তা"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"একটি কল করতে, প্রথমে বিমান মোড বন্ধ করুন৷"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"কনফারেন্স কলগুলি করা যায়নি৷"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"কল প্রত্যাখ্যান করা যায়নি৷"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"কল(গুলি) রিলিজ করা যায়নি৷"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"ভয়েসমেল নম্বর অজানা৷"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"ইন্টারনেট কল"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP কল"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"জরুরি কল"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"রেডিও চালু করা হচ্ছে…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"পরিষেবা এলাকার বাইরে, আবার চেষ্টা করা হচ্ছে…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"কল করা যায়নি৷ <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> একটি জরুরি নম্বর নয়!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"কল করা যায়নি৷ একটি জরুরি নম্বরে ডায়াল করুন!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ডায়াল করতে কীবোর্ড ব্যবহার করুন"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"কল সাময়িক স্থগিত করুন"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"কল পুনঃসূচনা করুন"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"কল যোগ করুন"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"কলগুলি মার্জ করুন"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"কল অদল বদল করুন"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"ধরে থাকুন"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"শেষ করুন"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"ডায়ালপ্যাড"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"কলগুলি মার্জ করুন"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"সোয়াপ করুন"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"কলগুলি পরিচালনা করুন"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"কনফারেন্স পরিচালনা করুন"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"কনফারেন্স কল পরিচালনা করুন"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"অডিও"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"ভিডিও কল"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"ভয়েস কলে পরিবর্তন করুন"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"ক্যামেরা স্যুইচ করুন"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"ভিডিও বিরাম দিন"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"আরো বিকল্প"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"পরিষেবা"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"সেটআপ"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;সেট করা নেই&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"পাউন্ড"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"ডায়াল করুন"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"ব্যাক-স্পেস"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"স্পীকারফোন সক্ষম করা আছে৷"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"স্পিকারফোন নির্বাচন করা হয়েছে"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ইয়ারপিস নির্বাচন করা হয়েছে"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"তারযুক্ত হেডসেট নির্বাচন করা হয়েছে"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth হেডসেট নির্বাচন করা হয়েছে"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"কল নিঃশব্দ করা আছে৷"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"কল সশব্দ করা হয়েছে।"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"কলটি সাময়িকভাবে স্থগিত রাখা হয়েছে।"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"সাময়িকভাবে স্থগিত রাখা অবস্থা থেকে কলটি সরানো হয়েছে।"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"উত্তর"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS পাঠান"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"অস্বীকার করুন"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"ভিডিও কল হিসেবে উত্তর দিন"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"অডিও কল হিসেবে উত্তর দিন"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"ভিডিওর অনুরোধ গ্রহণ করুন"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"ভিডিওর অনুরোধ প্রত্যাখ্যান করুন"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> এর জন্য উপরের দিকে স্লাইড করুন৷"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> এর জন্য বাম দিকে স্লাইড করুন৷"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> এর জন্য ডান দিকে স্লাইড করুন৷"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> এর জন্য নীচের দিকে স্লাইড করুন৷"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"কম্পন"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"কম্পন"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"শব্দ"</string>
     <string name="default_notification_description" msgid="78174796906240970">"ডিফল্ট শব্দ (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ফোন রিংটোন"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"রিং হওয়ার সময় কম্পন হবে"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"ডায়াল প্যাড স্পর্শ টোন"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"স্বয়ংসম্পূর্ণ ডায়াল প্যাড"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"রিংটোন ও কম্পন"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"কনফারেন্স কল পরিচালনা করুন"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"জরুরি নম্বর"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"০"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"১"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"২"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"৩"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"৪"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"৫"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"৬"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"৭"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"৮"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"৯"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"অ্যাকাউন্ট নির্বাচন করুন"</string>
 </resources>
