--- a/InCallUI/res/values-de/strings.xml
+++ b/InCallUI/res/values-de/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Unbekannt"</string>
     <string name="private_num" msgid="6713286113000232309">"Private Nummer"</string>
     <string name="payphone" msgid="1931775086311769314">"Telefonzelle"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Leitung besetzt"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Netzwerk ausgelastet"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Keine Antwort, Zeitüberschreitung"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Server nicht erreichbar"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Nummer nicht erreichbar"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Ungültiger Nutzername oder ungültiges Passwort"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Anruf außerhalb des Netzwerks"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Serverfehler. Bitte versuchen Sie es später erneut."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Kein Signal"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM-Grenzwert überschritten"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Mobilfunkverbindung aus"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Keine SIM-Karte oder SIM-Kartenfehler"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobilfunknetz nicht verfügbar"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Ausgehende Anrufe unterliegen der Anrufbegrenzung."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Sie können keine Anrufe tätigen, wenn die Anrufsperre aktiviert ist."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Alle Anrufe werden durch die Zugriffssteuerung beschränkt."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Notrufe werden durch die Zugriffssteuerung beschränkt."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Normale Anrufe werden durch die Zugriffssteuerung beschränkt."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Ungültige Nummer"</string>
     <string name="confCall" msgid="1904840547188336828">"Telefonkonferenz"</string>
     <string name="call_lost" msgid="317670617901479594">"Anruf ist verloren gegangen."</string>
     <string name="ok" msgid="3811371167865772377">"OK"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Auflegen"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Anruf"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Meine Nummer lautet <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>."</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Videoverbindung wird hergestellt."</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videoanruf"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Videoanfrage wird gesendet."</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Fehler bei der Verbindung für den Videoanruf"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Ihre Rückrufnummer lautet:\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Ihre Notrufnummer lautet:\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Verbindung wird aufgebaut..."</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Entgangener Anruf"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Entgangene Anrufe"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Aktueller Anruf"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Gehaltener Anruf"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Eingehender Anruf"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Eingehender Videoanruf"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Eingehende Videoanfrage"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Neue Nachricht"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Neue Nachricht (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> wählen"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"kein Dienst"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Ausgewähltes Netzwerk (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) nicht verfügbar"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Beenden"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Videoanruf"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Nur Audio"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Akzeptieren"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Ablehnen"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Zurückrufen"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Nachricht"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Deaktivieren Sie zunächst den Flugmodus, um einen Anruf zu tätigen."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Keine Telefonkonferenz möglich."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Anruf kann nicht abgelehnt werden."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Anrufe können nicht freigegeben werden."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Mailboxnummer unbekannt"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetanruf"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP-Anruf"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Notruf"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Mobilfunkverbindung wird aktiviert..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Gebiet ohne Netzabdeckung, erneuter Versuch..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Anruf nicht verbunden. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ist keine Notrufnummer!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Anruf nicht verbunden. Wählen Sie eine Notrufnummer!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Zum Wählen Tastatur verwenden"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Anruf halten"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Anruf fortsetzen"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Anruf hinzufügen"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Anrufe verbinden"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Wechseln"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Halten"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Ende"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Wähltasten"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Anrufe verbinden"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Wechseln"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Anrufe verwalten"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Konferenz verwalten"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Konferenz verwalten"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Audio"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videoanruf"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Zu Sprachanruf wechseln"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Kamera wechseln"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Video pausieren"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Weitere Optionen"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Dienst"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Einrichtung"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Nicht festgelegt&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"Pfund"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"Wählen"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"Rücktaste"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Freisprechfunktion aktiviert"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Freisprechfunktion ausgewählt"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Kopfhörer ausgewählt"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Kabelheadset ausgewählt"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth-Headset ausgewählt"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Anruf stummgeschaltet"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Stummschaltung des Anrufs aufgehoben"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Anruf wird gehalten."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Anruf wird nicht mehr gehalten."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Antworten"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS senden"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Ablehnen"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Antworten mit Videoanruf"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Antworten mit Audioanruf"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Videoanfrage akzeptieren"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Videoanfrage ablehnen"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Zum <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> nach oben schieben"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Zum <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> nach links schieben"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Zum <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> nach rechts schieben"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Zum <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> nach unten schieben"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibration"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibration"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Töne"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Standardklingelton (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Klingelton"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Beim Klingeln vibrieren"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Wähltastentöne"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Autovervollst. für Wähltasten"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Klingelton &amp; Vibration"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Telefonkonferenz verwalten"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Notrufnummer"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Konto auswählen"</string>
 </resources>
