--- a/InCallUI/res/values-es/strings.xml
+++ b/InCallUI/res/values-es/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Desconocido"</string>
     <string name="private_num" msgid="6713286113000232309">"Número privado"</string>
     <string name="payphone" msgid="1931775086311769314">"Teléfono público"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Línea ocupada"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Red ocupada"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"No hay respuesta; se ha agotado el tiempo de espera."</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"No se puede establecer conexión con el servidor."</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"No se puede establecer la llamada."</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Contraseña o nombre de usuario incorrectos"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Llamada desde fuera de la red"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Error del servidor, inténtalo de nuevo más tarde."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"No hay señal"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Se ha superado el límite de ACM."</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Señal móvil desactivada"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"No hay tarjeta SIM o se ha producido un error relacionado con la misma."</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Red móvil no disponible"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Las llamadas salientes están restringidas por FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"No se pueden realizar llamadas mientras esté activada la restricción de llamadas."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Todas las llamadas están limitadas por el control de acceso."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Las llamadas de emergencia están limitadas por el control de acceso."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Las llamadas normales están limitadas por el control de acceso."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Número no válido"</string>
     <string name="confCall" msgid="1904840547188336828">"Conferencia telefónica"</string>
     <string name="call_lost" msgid="317670617901479594">"La llamada se ha perdido."</string>
     <string name="ok" msgid="3811371167865772377">"Aceptar"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Colgando"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Llamada entrante"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Mi número es <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>."</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Conectando videollamada"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videollamada"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Solicitando videollamada"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"No se puede conectar la videollamada"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Tu número de devolución de llamada\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Número de contacto para llamadas de emergencia\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Llamando..."</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Llamada perdida"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Llamadas perdidas"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Llamada en curso"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"En espera"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Llamada entrante"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Videollamada entrante"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Solicitud de videollamada entrante"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Nuevo mensaje de voz"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Buzón de voz nuevo (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Marcar <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Sin servicio"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"La red seleccionada (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) no está disponible."</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Colgar"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Vídeo"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Voz"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Aceptar"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Ignorar"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Llamar"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Mensaje"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Para realizar una llamada, primero debes desactivar el modo avión."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"No se ha podido realizar la conferencia telefónica."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"No se ha podido rechazar la llamada."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"No es posible finalizar las llamadas activas."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Número de buzón de voz desconocido."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Llamada por Internet"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Llamada SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Llamada de emergencia"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Activando señal móvil…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Área fuera de servicio; reintentando..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"No se ha enviado la llamada. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> no es un número de emergencia."</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"La llamada no se ha enviado. Marca un número de emergencia."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Utilizar teclado para marcar"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Retener llamada"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Reanudar llamada"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Añadir llamada"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Llamada a tres"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Alternar"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Retener"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Finalizar"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Teclado"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Llamada a tres"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Cambiar"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Administrar llamadas"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Administrar conferencia"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Administrar llamada"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Audio"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videollamada"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Cambiar a llamada de voz"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Cambiar cámara"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pausar vídeo"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Más opciones"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Servicio"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Configuración"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;No definido&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"libra"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"marcar"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"retroceder un espacio"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Altavoz habilitado"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Altavoz seleccionado"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Auricular seleccionado"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Auriculares con cable seleccionados"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Auriculares Bluetooth seleccionados"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Llamada silenciada"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Llamada silenciada."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Llamada en espera."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Llamada recuperada."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Responder"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Enviar SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Rechazar"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Responder como videollamada"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Responder como llamada de audio"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Aceptar solicitud de vídeo"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Rechazar solicitud de vídeo"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Desliza el dedo hacia arriba para <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Desliza el dedo hacia la izquierda para <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Desliza el dedo hacia la derecha para <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Desliza el dedo hacia abajo para <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibrar"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibrar"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Sonido"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Sonido predeterminado (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Tono del teléfono"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibrar al sonar"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Sonar al marcar número"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Autocompletar con teclado"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Tono y vibración"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Administrar conferencia telefónica"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Número de emergencia"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"s"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Seleccionar cuenta"</string>
 </resources>
