--- a/InCallUI/res/values-eu-rES/strings.xml
+++ b/InCallUI/res/values-eu-rES/strings.xml
@@ -22,32 +22,13 @@
     <string name="unknown" msgid="6878797917991465859">"Ezezaguna"</string>
     <string name="private_num" msgid="6713286113000232309">"Zenbaki pribatua"</string>
     <string name="payphone" msgid="1931775086311769314">"Telefono publikoa"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linea okupatuta"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Sarea okupatuta"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ez dago erantzunik, denbora-muga gainditu da"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Ezin da zerbitzariarekin konektatu"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Zenbakia ez dago eskuragarri"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Erabiltzaile-izen edo pasahitz okerra"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Sarearen kanpotik deitu da"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Zerbitzariaren errorea. Saiatu berriro geroago."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ez dago seinalerik"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM datuen muga gainditu da"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Irratia desaktibatuta"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ez dago SIM txartelik edo SIM txartelaren errore bat gertatu da"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Sare mugikorra ez dago erabilgarri"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Irteerako deiak FDN ezarpen bidez murrizten dira."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ezin duzu irteerako deirik egin deien debekuak aktibatuta dauden bitartean."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Dei guztiak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Larrialdi-deiak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Dei normalak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Zenbaki baliogabea"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferentzia-deia"</string>
     <string name="call_lost" msgid="317670617901479594">"Deia galdu da."</string>
     <string name="ok" msgid="3811371167865772377">"Ados"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Bozgorailua"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Aurikularrak"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Kabledun entzungailua"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetootha"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"Ondorengo tonuak bidali?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"Tonuak bidaltzen\n"</string>
     <string name="send_button" msgid="4106860097497818751">"Bidali"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Deia amaitzen"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Deia abian"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Nire zenbakia <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> da"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Bideoa konektatzen"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Bideo-deia"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Bideoa eskatzen"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Ezin da konektatu bideo-deia"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Deiak itzultzeko telefono-zenbakia\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Larrialdi-deiak itzultzeko zenbakia\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Markatzen"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Dei galdua"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Dei galduak"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Abian den deia"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Zain"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Sarrerako deia"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Sarrerako bideo-deia"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Sarrerako bideo-eskaera"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Ahots-mezu berria"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Ahots-mezu berriak (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Markatu <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,13 +69,17 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ez dago zerbitzurik"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Hautatutako sarea (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ez dago erabilgarri"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Amaitu deia"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Bideoa"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Ahotsa"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Onartu"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Baztertu"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Erantzun deiari"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Mezua"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Dei bat egiteko, Hegaldi modua desaktibatu behar duzu."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ez dago sarean erregistratuta."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"Sare mugikorra ez dago erabilgarri."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Ez da deia bidali ez delako baliozko zenbakirik idatzi."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Ez da deia bidali."</string>
+    <string name="incall_error_call_failed" msgid="4313552620858880999">"Ez da deia egin."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI sekuentzia hasten…"</string>
     <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Ez da zerbitzua onartzen."</string>
     <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Ezin da dei batetik bestera pasa."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Ezin da konferentzia-deirik egin."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Ezin da deia baztertu."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Ezin dira deiak askatu."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Erantzungailuaren zenbaki ezezaguna."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Interneteko deia"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP deia"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Larrialdi-deia"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Irratia pizten…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Zerbitzu-eremutik kanpo; berriro saiatzen…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Ez da deia bidali. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ez da larrialdietarako zenbaki bat!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Ez da deia bidali. Markatu larrialdietarako zenbaki bat!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Erabili teklatua markatzeko"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Utzi deia zain"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Berrekin deiari"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Gehitu deia"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Bateratu deiak"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Joan beste deira"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Utzi zain"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Amaitu"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Markagailua"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Bateratu deiak"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Trukatu"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Kudeatu deiak"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Kudeatu konferentzia"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Kudeatu deia"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Audioa"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Bideo-deia"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Aldatu ahots-deira"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Aldatu kamera"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pausatu bideoa"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Aukera gehiago"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Zerbitzua"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Konfigurazioa"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Ezarri gabe&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"libra"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"markatu"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"atzera tekla"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Bozgorailua gaitu da."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Bozgorailua hautatu da"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Aurikularrak hautatu dira"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Kabledun entzungailua hautatu da"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth entzungailua hautatu da"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Deiaren audioa desaktibatu da."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Deiaren audioa aktibatu da."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Deia zain utzi da."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Deia berreskuratu da."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Erantzun"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Bidali SMS mezua"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Baztertu"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Erantzun bideo-dei moduan"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Erantzun audio-dei moduan"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Onartu bideo-eskaera"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Ukatu bideo-eskaera"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Lerratu gora hau egiteko: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Lerratu ezkerrera hau egiteko: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Lerratu eskuinera hau egiteko: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Lerratu behera hau egiteko: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Egin dar-dar"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Egin dar-dar"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Soinua"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Soinu lehenetsia (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Telefonoaren tonua"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Egin dar-dar tonua jotzean"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Markagailuaren ukipen-tonuak"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Osatu markagailua automatikoki"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Tonua eta dardara"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Kudeatu konferentzia-deia"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Larrialdietarako zenbakia"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Hautatu kontua"</string>
 </resources>
