--- a/InCallUI/res/values-is-rIS/strings.xml
+++ b/InCallUI/res/values-is-rIS/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Óþekkt"</string>
     <string name="private_num" msgid="6713286113000232309">"Leyninúmer"</string>
     <string name="payphone" msgid="1931775086311769314">"Almenningssími"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Línan er upptekin"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Símkerfið er upptekið"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ekkert svar, rann út á tíma."</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Ekki næst í þjóninn"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Ekki næst í númerið"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Rangt notandanafn eða aðgangsorð"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Hringt utan kerfis"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Þjónsvilla. Reyndu aftur síðar."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ekkert samband"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM-hámarki náð"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Slökkt á loftneti"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ekkert SIM-kort eða villa á SIM-korti"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Farsímakerfi ekki tiltækt"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Fast númeraval lokar á hringd símtöl."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ekki er hægt að hringja þegar kveikt er á útilokun símtala."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Aðgangsstýring lokar á öll símtöl."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Aðgangsstýring lokar á neyðarsímtöl."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Aðgangsstýring lokar á venjuleg símtöl."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Ógilt númer"</string>
     <string name="confCall" msgid="1904840547188336828">"Símafundur"</string>
     <string name="call_lost" msgid="317670617901479594">"Símtalið slitnaði."</string>
     <string name="ok" msgid="3811371167865772377">"Í lagi"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Leggur á"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Í símtali"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Númerið mitt er <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Tengir myndskeið"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Myndsímtal"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Biður um myndskeið"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Ekki er hægt að tengja myndsímtal"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Svarhringinúmerið þitt\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Svarhringinúmerið þitt í neyð\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Hringir"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Ósvarað símtal"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Ósvöruð símtöl"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Samtal í gangi"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Í bið"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Símtal berst"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Myndsímtal berst"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Myndbeiðni berst"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Ný skilaboð í talhólfinu"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Ný skilaboð í talhólfinu (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Hringja í <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,13 +69,17 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ekkert símasamband"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Valið símkerfi (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) er ekki tiltækt"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Leggja á"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Myndskeið"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Tal"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Samþykkja"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Hunsa"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Hringja til baka"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Skilaboð"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Til að hringja símtal þarftu fyrst að slökkva á flugstillingu."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ekki skráð á símkerfi."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"Farsímakerfi ekki tiltækt."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Símtalið var ekki sent, gilt símanúmer var ekki slegið inn."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Símtalið var ekki sent."</string>
+    <string name="incall_error_call_failed" msgid="4313552620858880999">"Símtalið fór ekki í gegn."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Ræsir MMI-runu…"</string>
     <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Óstudd þjónusta."</string>
     <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Ekki hægt að skipta milli símtala."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Ekki hægt að halda símafund."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Ekki hægt að hafna símtali."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Ekki hægt að hringja."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Talhólfsnúmer óþekkt."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Netsímtal"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP-símtal"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Neyðarsímtal"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Kveikir á loftneti…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Utan þjónustusvæðis. Reynir aftur…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Símtalið var ekki sent. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> er ekki neyðarnúmer."</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Símtalið var ekki sent. Sláðu inn neyðarnúmer."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Notaðu lyklaborðið til að hringja"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Setja símtal í bið"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Halda símtali áfram"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Bæta við símtali"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Sameina símtöl"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Skipta á símtölum"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Setja í bið"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Ljúka"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Takkaborð"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Sameina símtöl"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Skipta milli"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Stjórna símtölum"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Stjórna símafundi"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Stjórna símafundi"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Hljóð"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Myndsímtal"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Breyta í símtal"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Skipta um myndavél"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Gera hlé á myndskeiði"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Fleiri valkostir"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Þjónusta"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Uppsetning"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Ekki valið&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"kassi"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"hringja"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"bakklykill"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Kveikt á hátalara."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Hátalari valinn"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Heyrnartól valin"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Höfuðtól með snúru valin"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth-höfuðtól valin"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Símtal þaggað."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Kveikt á hljóði í símtali."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Símtal sett í bið."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Símtal tekið úr bið."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Svara"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Senda SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Hafna"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Svara sem myndsímtali"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Svara sem símtali"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Samþykkja beiðni um myndsímtal"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Hafna beiðni um myndsímtal"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Strjúktu upp til að <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Strjúktu til vinstri til að <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Strjúktu til hægri til að <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Strjúktu niður til að <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Titringur"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Titringur"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Hljóð"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Sjálfgefið hljóð (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Hringitónn síma"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Titra við hringingu"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Snertitónar takkaborðs"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Sjálfvirk útfylling á takkaborði"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Hringitónn og titringur"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Stjórna símafundi"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Neyðarnúmer"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Velja reikning"</string>
 </resources>
