--- a/InCallUI/res/values-ja/strings.xml
+++ b/InCallUI/res/values-ja/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"通知不可能"</string>
     <string name="private_num" msgid="6713286113000232309">"非通知"</string>
     <string name="payphone" msgid="1931775086311769314">"公衆電話発信"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"話し中"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"ネットワークがビジーです"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"応答なし（タイムアウト）"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"サーバーに接続できません"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"番号に接続できません"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ユーザー名またはパスワードが正しくありません"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"ネットワーク外からの着信"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"サーバーエラー: しばらくしてからもう一度お試しください。"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"圏外"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACMの制限を超えています"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"無線通信をOFF"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIMがない、またはSIMエラー"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"モバイルネットワークが利用できません"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"発信番号制限により発信が制限されています。"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"通話制限中は発信できません。"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"発信制限が設定されています。"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"緊急通報の発信制限が設定されています。"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"緊急通報以外は発信制限が設定されています。"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"無効な番号"</string>
     <string name="confCall" msgid="1904840547188336828">"グループ通話"</string>
     <string name="call_lost" msgid="317670617901479594">"通話が切れました。"</string>
     <string name="ok" msgid="3811371167865772377">"OK"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"通話終了"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"着信"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"この電話の番号: <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"ビデオハングアウトに接続しています"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"ビデオハングアウト"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ビデオハングアウトをリクエストしています"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"ビデオハングアウトに接続できません"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"コールバック番号\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"緊急通報コールバック番号\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"発信中"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"不在着信"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"不在着信"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"通話中"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"保留中"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"通話着信"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ビデオハングアウト着信"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"ビデオハングアウトリクエスト着信"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"新しいボイスメール"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"新しいボイスメール（<xliff:g id="COUNT">%d</xliff:g>）"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>にダイヤル"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"通信サービスなし"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"選択したネットワーク（<xliff:g id="OPERATOR_NAME">%s</xliff:g>）が利用できません"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"通話終了"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"ビデオ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"音声"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"同意する"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"拒否"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"コールバック"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"メッセージ"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"機内モードをOFFにしてから発信してください。"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"グループ通話を利用できません。"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"着信を拒否できません。"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"通話を解放できません。"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"ボイスメールの番号が不明です"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"インターネット通話"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP通話"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"緊急通報"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"無線通信をONにしています..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"圏外 - 再試行中..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"発信できません。<xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g>は緊急通報番号ではありません。"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"発信できません。緊急通報番号におかけください。"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"キーボードで番号を入力してください"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"通話を保留"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"通話を再開"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"通話を追加"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"グループ通話"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"相手の切り替え"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"保留"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"終了"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"ダイヤルキー"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"グループ通話"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"切り替え"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"通話の管理"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"グループ通話の管理"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"グループ通話オプション"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"音声"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"ビデオハングアウト"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"音声通話に変更"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"カメラを切り替え"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"動画を一時停止"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"その他のオプション"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"サービス"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"セットアップ"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;未設定&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"ポンド"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"発信"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"バックスペース"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"スピーカーが有効です。"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"スピーカーフォンを選択しました"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"受話口を選択しました"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"有線ヘッドセットを選択しました"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetoothヘッドセットを選択しました"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"通話がミュートされています。"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"通話のミュートを解除しました。"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"通話を保留中です。"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"通話を保留から解除しました。"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"電話に出る"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMSを送信"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"着信拒否"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"ビデオハングアウトで電話に出る"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"音声通話で電話に出る"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"ビデオ通話のリクエストを承諾する"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"ビデオ通話のリクエストを拒否する"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"上にスライドして<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>を行います。"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"左にスライドして<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>を行います。"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"右にスライドして<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>を行います。"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"下にスライドして<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>を行います。"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"バイブレーション"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"バイブレーション"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"通知音"</string>
     <string name="default_notification_description" msgid="78174796906240970">"デフォルトの通知音（<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>）"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"着信音"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"着信時のバイブレーション"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"ダイヤルパッドのタッチ操作音"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"ダイヤルのオートコンプリート"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"着信音とバイブレーション"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"グループ通話オプション"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"緊急通報番号"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"アカウントの選択"</string>
 </resources>
