--- a/InCallUI/res/values-km-rKH/strings.xml
+++ b/InCallUI/res/values-km-rKH/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"មិន​ស្គាល់"</string>
     <string name="private_num" msgid="6713286113000232309">"លេខ​ឯកជន"</string>
     <string name="payphone" msgid="1931775086311769314">"ទូរស័ព្ទ​ប្រើ​កាក់"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"បណ្ដាញ​ជាប់​រវល់"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"បណ្ដាញ​ជាប់​រវល់"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"គ្មាន​ចម្លើយ​​តប អស់​ពេល"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"ម៉ាស៊ីន​មេ​មិន​អាច​ទៅ​ដល់"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"​លេខ​ដែល​មិន​អាច​ហៅ​ចូល"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ឈ្មោះ​អ្នក​ប្រើ​ ឬ​ពាក្យ​សម្ងាត់​មិន​ត្រឹមត្រូវ"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"បាន​​ហៅ​ពី​ក្រៅ​បណ្ដាញ"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"កំហុស​ម៉ាស៊ីន​មេ។ ព្យាយាម​ម្ដងទៀត​ពេលក្រោយ។"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"គ្មាន​សញ្ញា"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"បាន​លើស​ដែន​កំណត់ ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"បិទ​វិទ្យុ"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"គ្មាន​ស៊ីមកាត ឬ​កំហុស​ស៊ីមកាត"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"បណ្ដាញ​ចល័ត​មិន​អាច​ប្រើ​បាន"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"បាន​កំណត់​​កម្រិត​ការ​ហៅ​ចេញ​ដោយ FDN ។"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"អ្នក​មិន​អាច​​ហៅ​ចេញ​បាន​ទេ ពេល​បើក​ការរារាំង​ការ​ហៅ។"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"បាន​​កំណត់​កម្រិត​ការ​ហៅ​ទាំងអស់​ដោយ​ការ​ត្រួតពិនិត្យ​ចូល​ដំណើរការ។"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"បាន​កំណត់​កម្រិត​ការ​ហៅ​នៅ​ពេល​មាន​​​អាសន្ន​ដោយ​ការ​ត្រួតពិនិត្យ​ចូល​ដំណើរការ។"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"បាន​​កំណត់​កម្រិត​ការ​ហៅ​ធម្មតា​ដោយ​ការ​ត្រួតពិនិត្យ​ចូល​ដំណើរការ។"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"លេខ​មិន​ត្រឹមត្រូវ"</string>
     <string name="confCall" msgid="1904840547188336828">"ការ​ហៅ​ជា​សន្និសីទ"</string>
     <string name="call_lost" msgid="317670617901479594">"បាត់បង់​ការ​ហៅ។"</string>
     <string name="ok" msgid="3811371167865772377">"យល់​ព្រម​"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"បញ្ចប់​ការ​សន្ទនា"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"ការ​ហៅ​ចូល"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"លេខ​របស់​ខ្ញុំ​គឺ <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"ភ្ជាប់​វីដេអូ"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"ហៅ​ជា​វីដេអូ"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ស្នើ​វីដេអូ"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"មិន​អាច​ភ្ជាប់​ការ​ហៅ​ជា​វីដេអូ"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"លេខ​ហៅ​​ទៅ​វិញ​របស់​អ្នក\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"លេខ​ហៅ​ទៅ​វិញ​ពេល​អាសន្ន​របស់​អ្នក\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"ហៅ"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"ខកខាន​ទទួល"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"ខកខាន​ទទួល"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"កំពុង​បន្ត​ការ​ហៅ"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"រង់ចាំ"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ការ​ហៅ​ចូល"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ការ​ហៅចូលជា​វីដេអូ​"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"សំណើ​ការ​ហៅ​ជា​វីដេអូ​ចូល"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"សារ​ជា​សំឡេង​ថ្មី"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"សារ​ជា​សំឡេង​ថ្មី (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"ចុច <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"គ្មាន​សេវា"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"បណ្ដាញ​ដែល​បាន​ជ្រើស ( <xliff:g id="OPERATOR_NAME">%s</xliff:g> ) មិន​អាច​ប្រើ​បាន​ទេ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"បញ្ចប់​ការ​សន្ទនា"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"វីដេអូ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"សំឡេង"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ព្រម​ទទួល"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"បដិសេធ"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"ហៅ​ទៅ​វិញ"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"សារ"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ដើម្បី​កំណត់​ការ​ហៅ ដំបូង​ត្រូវ​បិទ​របៀប​នៅ​ពេល​ជិះ​យន្តហោះ។"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"មិន​អាច​ហៅ​ជា​សន្និសីទ។"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"មិន​អាច​បដិសេធ​ការ​ហៅ​។"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"មិន​អាច​ហៅ​បាន​ទេ។"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"មិន​ស្គាល់​លេខ​សារ​ជា​សំឡេង។"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"ហៅ​តាម​អ៊ីនធឺណិត"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"ការ​ហៅ SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"ការ​ហៅ​នៅ​ពេល​មាន​អាសន្ន"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"កំពុង​បើក​វិទ្យុ…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"នៅ​ក្រៅ​តំបន់​សេវា​ កំពុង​ព្យាយាម​ម្ដងទៀត…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"មិន​បាន​ផ្ញើ​ការ​ហៅ។ <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> គឺ​មិន​មែន​ជា​លេខ​ហៅ​ពេល​មាន​អាសន្ន!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"មិន​បាន​ផ្ញើ​​​ការ​​​ហៅ​។ ហៅ​បាន​តែ​លេខ​ពេល​មាន​​​អាសន្ន!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ប្រើ​​ក្ដារចុច​ដើម្បី​ចុច​លេខ"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"រង់ចាំ​ការ​ហៅ"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"បន្ត​ការហៅ"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"បន្ថែម​ការ​ហៅ"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"បញ្ចូល​ការ​ហៅ​ចូល​គ្នា"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"ប្ដូរ​ការ​ហៅ"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"រង់ចាំ"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"បញ្ចប់"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"បន្ទះ​លេខ"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"បញ្ចូល​ការ​ហៅ​រួម​​គ្នា"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"ប្ដូរ"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"គ្រប់គ្រង​ការ​ហៅ"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"គ្រប់គ្រង​សន្និសីទ"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"គ្រប់គ្រងការហៅ​ជាសន្និសីទ​"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"សំឡេង"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"ហៅ​ជា​វីដេអូ"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"ប្ដូរ​ទៅ​ការ​ហៅ​ជា​សំឡេង"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"ប្ដូរ​ម៉ាស៊ីន​ថត"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"ផ្អាក​វីដេអូ"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"ជម្រើស​ច្រើន​ទៀត"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"សេវា"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"រៀបចំ"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt; មិន​កំណត់ &gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"ផោន"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"ចុច"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"លុប​ថយក្រោយ"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"បាន​បើក​អូប៉ាល័រ​ទូរស័ព្ទ។"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"បាន​​ជ្រើស​អូប៉ាល័រ​ទូរស័ព្ទ"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"បាន​ជ្រើស​កាស"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"បាន​ជ្រើស​កាស​មាន​ខ្សែ"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"បាន​ជ្រើស​កាស​ប៊្លូធូស"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"ការ​ហៅ​បិទ​សំឡេង។"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"បាន​បើក​សំឡេង​ការ​ហៅ។"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"ការ​ហៅ​ស្ថិត​​ក្នុង​ការ​រង់ចាំ។"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"បាន​លុប​ការ​ហៅ​ចេញ​ពី​ការ​រង់ចាំ។"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"ឆ្លើយតប"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"ផ្ញើ​សារ SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"បដិសេធ"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"ឆ្លើយតប​ជា​ការ​ហៅ​ជា​​វីដេអូ"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ឆ្លើយតប​ជា​ការ​ហៅ​ជា​សំឡេង"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"ទទួលយក​សំណើ​វីដេអូ"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"ទទួលយក​សំណើ​វីដេអូ"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"រុញ​ឡើង​លើ​ដើម្បី <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ។"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"រុញ​ទៅ​ឆ្វេង​ដើម្បី <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ។"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"រុញ​​ទៅ​ស្ដាំ​ដើម្បី <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ។"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"រុញ​ចុះក្រោម​សម្រាប់ <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ។"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"ញ័រ"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"ញ័រ"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"សំឡេង"</string>
     <string name="default_notification_description" msgid="78174796906240970">"សំឡេង​លំនាំដើម (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"សំឡេង​ទូរស័ព្ទ​រោទ៍"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ញ័រ​នៅ​ពេល​រោទ៍"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"សំឡេង​ពេល​ប៉ះ​​បន្ទះ​លេខ"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"បន្ទះ​លេខ​បំពេញ​ស្វ័យប្រវត្តិ"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"សំឡេង​រោទ៍ &amp; ញ័រ"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"គ្រប់គ្រង​ការ​ហៅ​​ជា​សន្និសីទ"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"លេខ​ពេល​អាសន្ន"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"ជ្រើស​គណនី"</string>
 </resources>
