--- a/InCallUI/res/values-kn-rIN/strings.xml
+++ b/InCallUI/res/values-kn-rIN/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"ಅಜ್ಞಾತ"</string>
     <string name="private_num" msgid="6713286113000232309">"ಖಾಸಗಿ ಸಂಖ್ಯೆ"</string>
     <string name="payphone" msgid="1931775086311769314">"ಪಾವತಿಯ ಫೋನ್‌"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"ಲೈನ್‌ ಕಾರ್ಯನಿರತವಾಗಿದೆ"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"ನೆಟ್‌ವರ್ಕ್‌ ಕಾರ್ಯನಿರತವಾಗಿದೆ"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ಪ್ರತಿಕ್ರಿಯೆ ಇಲ್ಲ, ಸಮಯ ಮೀರಿದೆ"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"ಸರ್ವರ್ ಲಭ್ಯವಿಲ್ಲ"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"ಸಂಖ್ಯೆಯನ್ನು ತಲುಪಲಾಗಲಿಲ್ಲ"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ತಪ್ಪಾದ ಬಳಕೆದಾರ ಹೆಸರು ಅಥವಾ ಪಾಸ್‌ವರ್ಡ್"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"ನೆಟ್‌ವರ್ಕ್‌ನ ಹೊರಗಿನಿಂದ ಕರೆ ಮಾಡಲಾಗಿದೆ"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"ಸರ್ವರ್‌ ದೋಷ. ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"ಸಿಗ್ನಲ್ ಇಲ್ಲ"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM ಮಿತಿ ಮೀರಿದೆ"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ರೇಡಿಯೋ ಆಫ್"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"ಯಾವುದೇ SIM ಇಲ್ಲ ಅಥವಾ SIM ದೋಷ"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"ಮೊಬೈಲ್ ನೆಟ್‌ವರ್ಕ್ ಲಭ್ಯವಿಲ್ಲ"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN ನಿಂದ ಹೊರಹೋಗುವ ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಿದೆ."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"ಕರೆ ಬಾರಿಂಗ್ ಆನ್‌ ಆಗಿರುವಾಗ ನಿಮಗೆ ಹೊರಹೋಗುವ ಕರೆಗಳನ್ನು ಮಾಡಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ಪ್ರವೇಶ ನಿಯಂತ್ರಣದಿಂದ ಎಲ್ಲ ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗಿದೆ."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ಪ್ರವೇಶ ನಿಯಂತ್ರಣದಿಂದ ತುರ್ತು ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗಿದೆ."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ಸಾಮಾನ್ಯ ಕರೆಗಳನ್ನು ಎಲ್ಲ ಪ್ರವೇಶ ನಿಯಂತ್ರಣವು ನಿರ್ಬಂಧಿಸಿದೆ."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"ಅಮಾನ್ಯವಾದ ಸಂಖ್ಯೆ"</string>
     <string name="confCall" msgid="1904840547188336828">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆ"</string>
     <string name="call_lost" msgid="317670617901479594">"ಕರೆಯ ಸಂಪರ್ಕ ಕಡಿತಗೊಂಡಿದೆ."</string>
     <string name="ok" msgid="3811371167865772377">"ಸರಿ"</string>
@@ -65,14 +46,22 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"ಹ್ಯಾಂಗ್ ಮಾಡಲಾಗುತ್ತಿದೆ"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"ಕರೆಯಲ್ಲಿ"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"ನನ್ನ ಸಂಖ್ಯೆ <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"ವೀಡಿಯೊ ಸಂಪರ್ಕಪಡಿಸಲಾಗುತ್ತಿದೆ"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"ವೀಡಿಯೊ ಕರೆ"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ವೀಡಿಯೊ ವಿನಂತಿಸಲಾಗುತ್ತಿದೆ"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"ವೀಡಿಯೊ ಕರೆಯನ್ನು ಸಂಪರ್ಕಪಡಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"ನಿಮ್ಮ ಕಾಲ್‌ ಬ್ಯಾಕ್ ಸಂಖ್ಯೆ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"ನಿಮ್ಮ ತುರ್ತು ಕರೆಯ ಸಂಖ್ಯೆ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"ಡಯಲ್‌ ಮಾಡಲಾಗುತ್ತಿದೆ"</string>
-    <string name="notification_missedCallTitle" msgid="7554385905572364535">"ತಪ್ಪಿ ಹೋದ ಕರೆ"</string>
+    <string name="notification_missedCallTitle" msgid="7554385905572364535">"ಮಿಸ್ಡ್‌ ಕಾಲ್‌"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"ತಪ್ಪಿದ ಕರೆಗಳು"</string>
     <string name="notification_missedCallsMsg" msgid="4575787816055205600">"<xliff:g id="NUM_MISSED_CALLS">%s</xliff:g> ತಪ್ಪಿದ ಕರೆಗಳು"</string>
-    <string name="notification_missedCallTicker" msgid="504686252427747209">"<xliff:g id="MISSED_CALL_FROM">%s</xliff:g> ಅವರಿಂದ ತಪ್ಪಿದ ಕರೆ"</string>
+    <string name="notification_missedCallTicker" msgid="504686252427747209">"<xliff:g id="MISSED_CALL_FROM">%s</xliff:g> ಅವರಿಂದ ಮಿಸ್ಡ್‌ ಕಾಲ್‌"</string>
     <string name="notification_ongoing_call" msgid="7068688957273482989">"ಚಾಲ್ತಿಯಲ್ಲಿರುವ ಕರೆ"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"ತಡೆಹಿಡಿಯಲಾಗಿದೆ"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ಒಳಬರುವ ಕರೆ"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ಒಳಬರುವ ವೀಡಿಯೊ ಕರೆ"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"ಒಳಬರುವ ವೀಡಿಯೊ ವಿನಂತಿ"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"ಹೊಸ ಧ್ವನಿಮೇಲ್‌"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"ಹೊಸ ಧ್ವನಿಮೇಲ್‌‌ (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> ಗೆ ಡಯಲ್‌‌ ಮಾಡು"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"ಯಾವುದೇ ಸೇವೆಯಿಲ್ಲ"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"ಆಯ್ಕೆಮಾಡಿದ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ನೆಟ್‌ವರ್ಕ್‌ ಲಭ್ಯವಿಲ್ಲ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"ಹ್ಯಾಂಗ್ ಅಪ್ ಮಾಡಿ"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"ವೀಡಿಯೊ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"ಧ್ವನಿ"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ಸಮ್ಮತಿಸು"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"ವಜಾಗೊಳಿಸು"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"ಮರಳಿ ಕರೆ ಮಾಡಿ"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"ಸಂದೇಶ"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ಕರೆ ಮಾಡಲು, ಮೊದಲು ಏರ್‌ಪ್ಲೇನ್‌‌ ಮೋಡ್‌‌ ಆಫ್‌ ಮಾಡಿ."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆಗಳನ್ನು ಮಾಡಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ಕರೆಯನ್ನು ತಿರಸ್ಕರಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ಕರೆ(ಗಳನ್ನು) ಬಿಡುಗಡೆಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"ಅಪರಿಚಿತ ಧ್ವನಿಮೇಲ್ ಸಂಖ್ಯೆ."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"ಇಂಟರ್ನೆಟ್‌ ಕರೆ"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP ಕರೆ"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"ತುರ್ತು ಕರೆಗಳು"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ರೇಡಿಯೋ ಆನ್‌ ಮಾಡಲಾಗುತ್ತಿದೆ…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"ಸೇವಾ ಪ್ರದೇಶದ ಹೊರಗಿದೆ, ಮರುಪ್ರಯತ್ನಿಸಲಾಗುತ್ತಿದೆ…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"ಕರೆ ಮಾಡಲಾಗಿಲ್ಲ. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ತುರ್ತು ಸಂಖ್ಯೆಯಲ್ಲ!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"ಕರೆ ಮಾಡಲಾಗಿಲ್ಲ. ತುರ್ತು ಸಂಖ್ಯೆಗೆ ಡಯಲ್‌ ಮಾಡಿ!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ಡಯಲ್‌ ಮಾಡಲು ಕೀಬೋರ್ಡ್‌ ಬಳಸಿ"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"ಕರೆಯನ್ನು ಹೋಲ್ಡ್‌‌ ಮಾಡು"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"ಕರೆಯನ್ನು ಮುಂದುವರಿಸು"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"ಕರೆಯನ್ನು ಸೇರಿಸು"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"ಕರೆಗಳನ್ನು ವಿಲೀನಗೊಳಿಸು"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"ಕರೆಗಳನ್ನು ಬದಲಾಯಿಸಿ"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"ಹೋಲ್ಡ್‌‌ ಮಾಡು"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"ಮುಕ್ತಾಯ"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"ಡಯಲ್‌ಪ್ಯಾಡ್‌"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"ಕರೆಗಳನ್ನು ವಿಲೀನಗೊಳಿಸು"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"ಸ್ವ್ಯಾಪ್‌ ಮಾಡು"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"ಕರೆಗಳನ್ನು ನಿರ್ವಹಿಸಿ"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"ಕಾನ್ಫರೆನ್ಸ್ ನಿರ್ವಹಿಸಿ"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆಯನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ಆಡಿಯೊ"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"ವೀಡಿಯೊ ಕರೆ"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"ಧ್ವನಿ ಕರೆಗೆ ಬದಲಾಯಿಸಿ"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"ಕ್ಯಾಮರಾ ಬದಲಿಸಿ"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"ವೀಡಿಯೊ ವಿರಾಮಗೊಳಿಸು"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"ಇನ್ನಷ್ಟು ಆಯ್ಕೆಗಳು"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"ಸೇವೆ"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"ಸೆಟಪ್"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;ಹೊಂದಿಸಿಲ್ಲ&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"ಪೌಂಡ್"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"ಡಯಲ್"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"ಸ್ಪೀಕರ್‌ಫೋನ್ ಸಕ್ರಿಯಗೊಳಿಸಲಾಗಿದೆ."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"ಸ್ಪೀಕರ್‌ಫೋನ್ ಆಯ್ಕೆ ಮಾಡಲಾಗಿದೆ"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ಇಯರ್‌ಪೀಸ್ ಆಯ್ಕೆ ಮಾಡಲಾಗಿದೆ"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"ವೈರ್‌ನ ಹೆಡ್‌ಸೆಟ್ ಆಯ್ಕೆ ಮಾಡಲಾಗಿದೆ"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ಬ್ಲೂಟೂತ್ ಹೆಡ್‌ಸೆಟ್ ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಲಾಗಿದೆ"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"ಕರೆಯನ್ನು ಮ್ಯೂಟ್ ಮಾಡಲಾಗಿದೆ."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"ಕರೆಯನ್ನು ಅನ್‌ಮ್ಯೂಟ್ ಮಾಡಲಾಗಿದೆ."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"ಕರೆಯನ್ನು ತಡೆಹಿಡಿಯಲಾಗಿದೆ."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"ಕರೆಯ ತಡೆಯನ್ನು ತೆಗೆದುಹಾಕಲಾಗಿದೆ."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"ಉತ್ತರ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS ಕಳುಹಿಸು"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"ನಿರಾಕರಿಸು"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"ವೀಡಿಯೊ ಕರೆ ರೂಪದಲ್ಲಿ ಉತ್ತರಿಸಿ"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ಆಡಿಯೊ ಕರೆಯಂತೆ ಉತ್ತರಿಸಿ"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"ವೀಡಿಯೊ ವಿನಂತಿ ಒಪ್ಪಿಕೊಳ್ಳು"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"ವೀಡಿಯೊ ವಿನಂತಿ ತಿರಸ್ಕರಿಸು"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ಗಾಗಿ ಮೇಲಕ್ಕೆ ಸ್ಲೈಡ್ ಮಾಡಿ."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ಗಾಗಿ ಎಡಕ್ಕೆ ಸ್ಲೈಡ್ ಮಾಡಿ."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ಗಾಗಿ ಬಲಗಡೆಗೆ ಸ್ಲೈಡ್ ಮಾಡಿ."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ಗಾಗಿ ಕೆಳಕ್ಕೆ ಸ್ಲೈಡ್ ಮಾಡಿ."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"ವೈಬ್ರೇಟ್‌"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"ವೈಬ್ರೇಟ್‌"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ಧ್ವನಿ"</string>
     <string name="default_notification_description" msgid="78174796906240970">"ಡೀಫಾಲ್ಟ್‌ ಧ್ವನಿ (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ಫೋನ್ ರಿಂಗ್‌ಟೋನ್"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ರಿಂಗ್ ಆಗುವಾಗ ಕಂಪಿಸು"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"ಡಯಲ್ ಪ್ಯಾಡ್ ಸ್ಪರ್ಶಿಸುವ ಟೋನ್‌ಗಳು"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"ಡಯಲ್‌‌ ಪ್ಯಾಡ್ ಸ್ವಯಂಪೂರ್ಣತೆ"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ರಿಂಗ್‌ಟೋನ್‌‌ &amp; ವೈಬ್ರೇಟ್‌"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆಯನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"ತುರ್ತು ಸಂಖ್ಯೆ"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"ಖಾತೆ ಆಯ್ಕೆಮಾಡಿ"</string>
 </resources>
