--- a/InCallUI/res/values-ml-rIN/strings.xml
+++ b/InCallUI/res/values-ml-rIN/strings.xml
@@ -22,32 +22,13 @@
     <string name="unknown" msgid="6878797917991465859">"അജ്ഞാതം"</string>
     <string name="private_num" msgid="6713286113000232309">"സ്വകാര്യ നമ്പർ"</string>
     <string name="payphone" msgid="1931775086311769314">"പണം നൽകി ഉപയോഗിക്കുന്ന ഫോൺ"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"ലൈൻ തിരക്കിലാണ്"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"നെറ്റ്‌വർക്ക് തിരക്കിലാണ്"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"പ്രതികരണമില്ല, കാലഹരണപ്പെട്ടു"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"സെർവറിൽ പരിധിയ്‌ക്ക് പുറത്താണ്"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"നമ്പർ പരിധിയ്‌ക്ക് പുറത്താണ്"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ഉപയോക്തൃനാമമോ പാസ്‌വേഡോ തെറ്റാണ്"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"നെറ്റ്‌വർക്കില്ലാത്ത സ്ഥലത്തുനിന്നും കോൾ ചെയ്‌തു"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"സെർവർ പിശക്. പിന്നീട് വീണ്ടും ശ്രമിക്കുക."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"സിഗ്‌നൽ ഇല്ല"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM പരിധി കഴിഞ്ഞു"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"റേഡിയോ ഓഫാക്കുക"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM ഇല്ല അല്ലെങ്കിൽ SIM പിശക്"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"മൊബൈൽ നെറ്റ്‌വർക്ക് ലഭ്യമല്ല"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN, ഔട്ട്ഗോയിംഗ് കോളുകൾ നിയന്ത്രിച്ചിരിക്കുന്നു."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"കോൾ ബാറിംഗ് ഓണായിരിക്കുമ്പോൾ നിങ്ങൾ ഔട്ട്‌ഗോയിംഗ് കോളുകൾ വിളിക്കാനാകില്ല."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ആക്‌സസ്സ് നിയന്ത്രണം, എല്ലാ കോളുകളും നിയന്ത്രിച്ചിരിക്കുന്നു."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ആക്‌സസ്സ് നിയന്ത്രണം, അടിയന്തര കോളുകൾ നിയന്ത്രിച്ചിരിക്കുന്നു."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ആക്‌സസ്സ് നിയന്ത്രണം, സാധാരണ കോളുകൾ നിയന്ത്രിച്ചിരിക്കുന്നു."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"സാധുതയില്ലാത്ത ന‍മ്പര്‍"</string>
     <string name="confCall" msgid="1904840547188336828">"കോൺഫറൻസ് കോൾ"</string>
     <string name="call_lost" msgid="317670617901479594">"കോൾ നഷ്‌ടപ്പെട്ടു."</string>
     <string name="ok" msgid="3811371167865772377">"ശരി"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"സ്പീക്കർ"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ഹാൻഡ്‌സെറ്റ് ഇയർപീസ്"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"വയർ മുഖേന ബന്ധിപ്പിച്ച ഹെഡ്‌സെറ്റ്"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"ബ്ലൂടൂത്ത്"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"ഇനിപ്പറയുന്ന ടോണുകൾ അയയ്‌ക്കണോ?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"ടോണുകൾ അയയ്‌ക്കുന്നു\n"</string>
     <string name="send_button" msgid="4106860097497818751">"അയയ്‌ക്കുക"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"ഹാംഗിംഗ് അപ്പ്"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"കോളിലാണ്"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"എന്റെ നമ്പർ <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> ആണ്"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"വീഡിയോ കണക്‌റ്റുചെയ്യുന്നു"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"വീഡിയോ കോള്‍"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"വീഡിയോ അഭ്യർത്ഥിക്കുന്നു"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"വീഡിയോ കോൾ കണക്‌റ്റ് ചെയ്യാനാകില്ല"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"നിങ്ങളുടെ തിരികെ വിളിക്കുന്നതിനുള്ള നമ്പർ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g> ആണ്"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"നിങ്ങളുടെ തിരികെവിളിക്കുന്നതിനുള്ള അടിയന്തിര നമ്പർ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g> ആണ്"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"ഡയൽ ചെയ്യുന്നു"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"മിസ്‌ഡ് കോൾ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"മിസ്‌ഡ് കോളുകൾ"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"കോൾ സജീവമാണ്"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"ഹോള്‍ഡിലാണ്"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ഇന്‍കമിംഗ് കോള്‍"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ഇൻകമിംഗ് വീഡിയോ കോൾ"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"ഇൻകമിംഗ് വീഡിയോ അഭ്യർത്ഥന"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"പുതിയ വോയ്‌സ്‌മെയിൽ"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"പുതിയ വോയ്‌സ്‌മെയിൽ (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> ഡയൽ ചെയ്യുക"</string>
@@ -80,9 +69,13 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"സേവനമില്ല"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"തിരഞ്ഞെടുത്ത നെറ്റ്‌വർക്ക് (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ലഭ്യമല്ല"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"ഹാംഗ് അപ്പ് ചെയ്യുക"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"വീഡിയോ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"വോയ്‌സ്"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"അംഗീകരിക്കുക"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"നിരസിക്കുക"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"കോൾബാക്ക്"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"സന്ദേശം"</string>
-    <string name="incall_error_power_off" msgid="6550191216405193368">"ഒരു കോൾ വിളിക്കാൻ, ആദ്യം വിമാന മോഡ് ഓഫുചെയ്യുക."</string>
+    <string name="incall_error_power_off" msgid="6550191216405193368">"ഒരു കോൾ വിളിക്കാൻ, ആദ്യം ഫ്ലൈറ്റ് മോഡ് ഓഫുചെയ്യുക."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"നെറ്റ്‌വർക്കിൽ രജിസ്റ്റർ ചെയ്‌തിട്ടില്ല."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"മൊബൈൽ നെറ്റ്‌വർക്ക് ലഭ്യമല്ല."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"കോൽ ചെയ്യാനായില്ല. സാധുവായ നമ്പറൊന്നും നൽകിയില്ല."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"കോൺഫറൻസ് കോളുകൾ ചെയ്യാനായില്ല."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"കോൾ നിരസിക്കാനായില്ല."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"കോൾ (കോളുകൾ) റിലീസുചെയ്യാനായില്ല."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"വോയ്‌സ് മെയിൽ നമ്പർ അജ്ഞാതമാണ്."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"ഇന്റർനെറ്റ് കോൾ"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP കോൾ"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"അടിയന്തര കോൾ"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"റേഡിയോ ഓൺ ചെയ്യുന്നു…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"സേവനമില്ലാത്ത മേഖല, വീണ്ടും ശ്രമിക്കുന്നു…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"കോൾ ചെയ്യാനായില്ല. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ഒരു അടിയന്തര നമ്പർ അല്ല!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"കോൾ ചെയ്യാനായില്ല. ഒരു അടിയന്തര നമ്പർ ഡയൽ ചെയ്യുക!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ഡയൽ ചെയ്യാൻ കീബോർഡ് ഉപയോഗിക്കുക"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"കോൾ ഹോൾഡുചെയ്യുക"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"കോൾ പുനരാരംഭിക്കുക"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"കോൾ ചേർക്കുക"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"കോളുകൾ ലയിപ്പിക്കുക"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"കോളുകൾ സ്വാപ്പുചെയ്യുക"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"ഹോള്‍ഡുചെയ്യുക"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"അവസാനിപ്പിക്കുക"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"ഡയല്‍‌പാഡ്"</string>
@@ -111,11 +108,15 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"കോളുകൾ ലയിപ്പിക്കുക"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"സ്വാപ്പുചെയ്യുക"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"കോളുകൾ നിയന്ത്രിക്കുക"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"കോൺഫറൻസ് നിയന്ത്രിക്കുക"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"കോൺഫറൻസ് കോൾ നിയന്ത്രിക്കുക"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ഓഡിയോ"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"വീഡിയോ കോൾ"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"വോയ്‌സ്‌ കോളിലേക്ക് മാറ്റുക"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"ക്യാമറയിലേക്ക് മാറുക"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"വീഡിയോ താൽക്കലികമായി നിർത്തുക"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"കൂടുതൽ ഓപ്‌ഷനുകൾ"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"സേവനം"</string>
-    <string name="voicemail_settings" msgid="72448049107749316">"സജ്ജീകരിക്കുക"</string>
+    <string name="voicemail_settings" msgid="72448049107749316">"സജ്ജമാക്കുക"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;സജ്ജീകരിച്ചിട്ടില്ല&gt;"</string>
     <string name="other_settings" msgid="3672912580359716394">"മറ്റ് കോൾ ക്രമീകരണങ്ങൾ"</string>
     <string name="calling_via_template" msgid="4839419581866928142">"<xliff:g id="PROVIDER_NAME">%s</xliff:g> മുഖേന വിളിക്കുന്നു"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"പൗണ്ട്"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"ഡയൽ ചെയ്യുക"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"സ്‌പീക്കർഫോൺ പ്രവർത്തനക്ഷമമാക്കി."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"സ്‌പീക്കർഫോൺ തിരഞ്ഞെടുത്തു"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ഇയർഫോൺ തിരഞ്ഞെടുത്തു"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"വയർ മുഖേന ബന്ധിപ്പിച്ച ഹെഡ്‌സെറ്റ് തിരഞ്ഞെടുത്തു"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ബ്ലൂടൂത്ത് ഹെഡ്‌സെറ്റ് തിരഞ്ഞെടുത്തു"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"കോൾ നിശബ്‌ദമാക്കി."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"കോൾ അൺ‌മ്യൂട്ടുചെയ്‌തു."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"കോൾ ഹോൾഡുചെയ്‌തു."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"കോൾ ഹോൾഡുചെയ്‌തത് മാറ്റി."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"മറുപടി നൽകുക"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS അയയ്ക്കുക"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"നിരസിക്കുക"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"വീഡിയോ കോളായി മറുപടി നൽകുക"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ഓഡിയോ കോളായി മറുപടി നൽകുക"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"വീഡിയോ അഭ്യർത്ഥന അംഗീകരിക്കുക"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"വീഡിയോ അഭ്യർത്ഥന നിരസിക്കുക"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> എന്നതിനായി മുകളിലേയ്‌ക്ക് സ്ലൈഡുചെയ്യുക."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> എന്നതിനായി ഇടത്തേയ്‌ക്ക് സ്ലൈഡുചെയ്യുക."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> എന്നതിനായി വലത്തേയ്‌ക്ക് സ്ലൈഡുചെയ്യുക."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> എന്നതിനായി താഴേക്ക് സ്ലൈഡുചെയ്യുക."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"വൈബ്രേറ്റുചെയ്യുക"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"വൈബ്രേറ്റുചെയ്യുക"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ശബ്‌ദം"</string>
     <string name="default_notification_description" msgid="78174796906240970">"സ്ഥിര ശബ്‌ദം (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ഫോൺ റിംഗ്ടോൺ"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"റിംഗുചെയ്യുമ്പോൾ വൈബ്രേറ്റുചെയ്യുക"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"ഡയൽ പാഡ് ടച്ച് ടോണുകൾ"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"ഡയൽ പാഡ് യാന്ത്രികപൂർത്തീകരണം"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"റിംഗ്ടോണും വൈബ്രേറ്റുചെയ്യലും"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"കോൺഫറൻസ് കോൾ നിയന്ത്രിക്കുക"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"അടിയന്തര നമ്പർ"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"അക്കൗണ്ട് തിരഞ്ഞെടുക്കുക"</string>
 </resources>
