--- a/InCallUI/res/values-ne-rNP/strings.xml
+++ b/InCallUI/res/values-ne-rNP/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"अज्ञात"</string>
     <string name="private_num" msgid="6713286113000232309">"निजी नम्बर"</string>
     <string name="payphone" msgid="1931775086311769314">"फोन तिर्नुहोस्"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"लाइन व्यस्त"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"नेटवर्क व्यस्त"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"कुनै पनि जवाफ छैन, समय सकियो।"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"सर्भर पहुँचयोग्य"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"सङ्ख्या पहुँचयोग्य छैन"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"गलत प्रयोगकर्ता नाम वा पासवर्ड"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"नेटवर्कको बाहिरबाट कल भयो"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"सर्भर त्रुटि। पछि पुनःप्रयास गर्नुहोस्।"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"सङ्केत छैन"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM सीमा पार भयो"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"रेडियो बन्द"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM छैन वा SIM त्रुटि"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"मोबाइल सञ्जाल उपलब्ध छैन"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN द्वारा बहिर्गमन कल निषेधित गरिएको छ।"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"कल ब्यारिङ हुँदा तपाईं बहिर्गमन कलहरू गर्न सक्नु हुन्न।"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"पहुँच नियन्त्रणद्वारा सबै कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"पहुँच नियन्त्रणद्वारा आपतकालीन कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"पहुँच नियन्त्रणद्वारा सामान्य कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"अमान्य सङ्ख्या"</string>
     <string name="confCall" msgid="1904840547188336828">"सम्मेलन कल"</string>
     <string name="call_lost" msgid="317670617901479594">"कल हराएको छ।"</string>
     <string name="ok" msgid="3811371167865772377">"ठिक छ"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"फोन काट्दै"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"कलमा"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"मेरो नम्बर <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> हो"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"भिडियो जडान गरिँदै"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"भिडियो कल"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"भिडियो अनुरोध"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"भिडियो कल जडान गर्न सकिएन"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"तपाईंको कल ब्याक नम्बर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"तपाईंको आकस्मिक कल फिर्ता नम्बर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"डायल गर्ने"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"छुटेका कल"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"छुटेका कल"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"चलिरहेको कल"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"होल्डमा"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"आगमन कल"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"आगमन भिडियो कल"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"आगमन भिडियो अनुरोध"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"नयाँ भ्वाइस मेल"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"नयाँ भ्वाइसमेल ( <xliff:g id="COUNT">%d</xliff:g> )"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>मा डायल गर्नुहोस्"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"सेवा छैन"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"चयन गरिएको नेटवर्क ( <xliff:g id="OPERATOR_NAME">%s</xliff:g> ) अनुपलब्ध"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"छुटाउनुहोस्"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"भिडियो"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"आवाज"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"स्वीकार्नुहोस्"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"खारेज गर्नुहोस्"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"फेरि कल गर्नुहोस्"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"सन्देश"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"कल राख्नका लागि, पहिले हवाइजहाज मोड बन्द गर्नुहोस्।"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"सम्मेलन कलहरू गर्न असमर्थ।"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"कल अस्वीकार गर्न असमर्थ।"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"कल(हरू) छुटाउन असमर्थ।"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"भ्वाइसमेल नम्बर अज्ञात छ।"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"इन्टरनेट कल"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP कल"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"आपतकालीन कल"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"रेडियो खोल्दै..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"सेवा क्षेत्रभन्दा बाहिर, पुनः प्रयास गर्दै..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"कल पठाएको छैन। <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> आपतकालीन नम्बर हैन!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"कल पठाएको छैन। एउटा आपतकालीन नम्बर डायल गर्नुहोस्!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"डायल गर्न किबोर्ड प्रयोग गर्नुहोस्"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"कल होल्ड गर्नुहोस्"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"कललाई पुन: निरन्तरता दिनुहोस्"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"कल थप्नुहोस्"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"कलहरू जोड्नुहोस्"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"कलहरू स्वाप गर्नुहोस्"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"होल्ड गर्नुहोस्"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"अन्त्य​ गर्नुहोस्"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"डायलप्याड"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"कलहरू समायोजन  गर्नुहोस्"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"स्वाप"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"कलहरू प्रबन्ध गर्नुहोस्"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"सम्मेलन प्रबन्ध गर्नुहोस्"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"सम्मेलन कल प्रबन्ध गर्नुहोस्"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"अडियो"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"भिडियो कल"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"आवाज कल गर्न परिवर्तन"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"क्यामेरा फेर्नुहोस्"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"भिडियो स्थगित गर्नुहोस्"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"थप विकल्पहरू"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"सेवा"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"सेटअप"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"सेट गरेको छैन"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"पाउन्ड"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"डायल"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"ब्याकस्पेस"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"स्पिकरफोन सक्षम भयो।"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"स्पिकरफोन चयन गरियो"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"इयरपिस चयन गरियो"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"तार युक्त हेडसेट चयन गरियो"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ब्लुटुथ हेडसेट चयन गरियो"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"कल म्युट भयो।"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"कलको मौनता हटाइयो।"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"कल होल्डमा राखियो।"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"कल होल्डबाट हटाइयो।"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"उत्तर"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS पठाउनुहोस्"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"अस्वीकार गर्नुहोस्"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"भिडियो कल रूपमा जवाफ दिनुहोस्"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"अडियो कलको रूपमा जवाफ दिनुहोस्"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"भिडियो अनुरोध स्वीकार गर्नुहोस्"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"भिडियो अनुरोध अस्वीकार गर्नुहोस्"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> को लागि माथि सार्नुहोस्।"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>को लागि बायाँ सार्नुहोस्।"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>को लागि दायाँ सार्नुहोस्।"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> को लागि तल सार्नुहोस्।"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"भाइब्रेट"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"भाइब्रेट"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"आवाज:"</string>
     <string name="default_notification_description" msgid="78174796906240970">"पूर्वनिर्धारित ध्वनि ( <xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g> )"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"फोन रिङटोन"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"घन्टी बज्दा भाइब्रेट"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"प्याड स्पर्श टोनहरू डायल गर्नुहोस्"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"डायल प्याड स्वतःपूर्ण"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"रिङ्गटोन र भाइब्रेट"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"सम्मेलन कल प्रबन्ध गर्नुहोस्"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"आपतकालीन नम्बर"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"०"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"१"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"२"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"३"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"४"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"५"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"६"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"७"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"८"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"९"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"खाता चयन गर्नुहोस्"</string>
 </resources>
