--- a/InCallUI/res/values-sk/strings.xml
+++ b/InCallUI/res/values-sk/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Neznáme"</string>
     <string name="private_num" msgid="6713286113000232309">"Súkromné číslo"</string>
     <string name="payphone" msgid="1931775086311769314">"Verejný telefón"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linka je obsadená"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Sieť je zaneprázdnená"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Bez odozvy, vypršal časový limit"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Server je nedostupný"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Volané číslo je nedostupné"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Nesprávne používateľské meno alebo heslo"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Volanie z priestoru mimo siete"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Chyba servera: Skúste to znova neskôr."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Žiadny signál"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Bol prekročený limit ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Rádio je vypnuté"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Karta SIM chýba alebo nefunguje"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobilná sieť nie je k dispozícii"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Odchádzajúce hovory sú obmedzené na pevne určené čísla (FDN)."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ak je zapnuté blokovanie hovorov, nie je možné uskutočňovať odchádzajúce hovory."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Všetky hovory sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Tiesňové volania sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Bežné volania sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Neplatné číslo"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferenčný hovor"</string>
     <string name="call_lost" msgid="317670617901479594">"Hovor bol prerušený."</string>
     <string name="ok" msgid="3811371167865772377">"OK"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Ukončovanie hovoru"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Prebieha hovor"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Moje číslo je <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Pripája sa video"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videohovor"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Žiada sa video"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Videohovor sa nedá pripojiť"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Vaše číslo na spätné volanie\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Núdzové číslo na spätné volanie\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Vytáčanie"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Zmeškaný hovor"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Zmeškané hovory"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Prebiehajúci hovor"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Podržaný hovor"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Prichádzajúci hovor"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Prichádzajúci videohovor"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Prichádzajúca žiadosť o video"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Nová hlasová správa"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Nová hlasová správa (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Zavolať hlasovú schránku <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,9 +69,13 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Žiadny signál"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Vybratá sieť (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) nie je k dispozícii"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Položiť"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Video"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Hlas"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Prijať"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Zatvoriť"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Zavolať späť"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Správa"</string>
-    <string name="incall_error_power_off" msgid="6550191216405193368">"Ak chcete telefonovať, vypnite najprv režim V lietadle."</string>
+    <string name="incall_error_power_off" msgid="6550191216405193368">"Ak chcete telefonovať, vypnite najprv režim v lietadle."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Prihlásenie do siete nebolo úspešné."</string>
     <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mobilná sieť nie je k dispozícii."</string>
     <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Hovor sa nepodarilo spojiť, nebolo zadané platné číslo."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Hovory nie je možné spojiť do konferenčného hovoru."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Hovor nie je možné odmietnuť."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Hovor nie je možné uvoľniť."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Číslo hlasovej schránky je neznáme"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetový hovor"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Hovory SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Tiesňové volanie"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Prebieha zapínanie rádia..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Nepokrytá oblasť, opakovanie pokusu..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Hovor sa nepodarilo spojiť. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> nie je číslo núdzového volania."</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Hovor nebol spojený, vytočte číslo tiesňového volania."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Číslo vytočíte pomocou klávesnice."</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Podržať hovor"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Obnoviť hovor"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Pridať hovor"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Zlúčiť hovory"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Zameniť hovory"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Podržať"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Koniec"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Číselná klávesnica"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Zlúčiť hovory"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Zameniť"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Spravovať hovory"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Správa konferencie"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Spravovať kon. hovor"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Zvuk"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videohovor"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Zmeniť na hlasový hovor"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Prepnúť kameru"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pozastaviť video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Ďalšie možnosti"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Služba"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Nastavenie"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Nenastavené&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"libra"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"vytáčanie"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Reproduktor je povolený."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Bol vybraný reproduktor"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Bolo vybrané slúchadlo"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Bola vybraná pripojená náhlavná súprava"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bola vybraná náhlavná súprava Bluetooth"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Zvuk hovoru bol vypnutý."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Zvuk hovoru bol obnovený"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Hovor bol pozdržaný"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Pozdržanie hovoru bolo zrušené"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Odpovedať"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Odoslať SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Odmietnuť"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Prijať ako videohovor"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Prijať ako zvukový hovor"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Prijať žiadosť o videohovor"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Odmietnuť žiadosť o videohovor"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Prejdite prstom nahor: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Prejdite prstom doľava: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Prejdite prstom doprava: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Prejdite prstom nadol: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibrovať"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibrovať"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Zvuk"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Predvolený zvuk (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Tón zvonenia telefónu"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibrovať pri zvonení"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Zvuky pri dotyku číselníku"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Automatické dokonč. číselnej klávesnice"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Tón zvonenia a vibrovanie"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Spravovať konferenčný hovor"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Číslo tiesňového volania"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Výber účtu"</string>
 </resources>
