--- a/InCallUI/res/values-sv/strings.xml
+++ b/InCallUI/res/values-sv/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Okänd"</string>
     <string name="private_num" msgid="6713286113000232309">"Privat nummer"</string>
     <string name="payphone" msgid="1931775086311769314">"Telefonautomat"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linjen är upptagen"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Nätverket är upptaget"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Inget svar, avbröts"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Servern kan inte nås"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Numret kan inte nås"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Felaktigt användarnamn eller lösenord"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Uppringt från ett annat nätverk"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Serverfel. Försök igen senare."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ingen signal"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM-gränsen har överskridits"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Radio av"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Inget SIM-kort eller SIM-kortsfel"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Inget mobilt nätverk är tillgängligt"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Utgående samtal begränsas av FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Du kan inte ringa utgående samtal när samtalsspärren är aktiverad."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Alla samtal begränsas av åtkomstkontroll."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Nödsamtal begränsas av åtkomstkontroll."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Vanliga samtal begränsas av åtkomstkontroll."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Ogiltigt nummer"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferenssamtal"</string>
     <string name="call_lost" msgid="317670617901479594">"Samtal har försvunnit."</string>
     <string name="ok" msgid="3811371167865772377">"OK"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Lägger på"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"I samtal"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Mitt nummer är <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Ansluter video"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videosamtal"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Begär video"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Det går inte att ansluta videosamtalet"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Ditt nummer för återuppringning\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Ditt nödnummer för återuppringning\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Ringer"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Missat samtal"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Missade samtal"</string>
@@ -73,13 +60,19 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Pågående samtal"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Parkerat"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Inkommande samtal"</string>
-    <string name="notification_voicemail_title" msgid="8933468752045550523">"Ny röstbrevlåda"</string>
-    <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Ny röstbrevlåda (<xliff:g id="COUNT">%d</xliff:g>)"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Inkommande videosamtal"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Inkommande begäran om videosamtal"</string>
+    <string name="notification_voicemail_title" msgid="8933468752045550523">"Nytt röstmeddelande"</string>
+    <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Nytt röstmeddelande (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Ring <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Nummer till röstbrevlåda okänt"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ingen tjänst"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Det valda nätverket (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) är inte tillgängligt"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Lägg på"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Video"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Röst"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Godkänn"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Avvisa"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Ring upp"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Meddelande"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Om du vill ringa ett samtal måste du först inaktivera flygplansläge."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Det gick inte att ringa konferenssamtal."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Det gick inte att avvisa samtal."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Det gick inte att släppa samtal."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Okänt nummer till röstbrevlådan."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetsamtal"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP-anrop"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Nödsamtal"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Sätter på radion…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Fungerar inte i detta område. Försöker igen…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Samtalet har inte skickats. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> är inte ett nödsamtalsnummer!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Samtalet har inte skickats. Ring ett nödsamtalsnummer!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Använd tangentbordet om du vill ringa"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Parkera samtal"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Återuppta samtal"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Lägg till samtal"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Koppla ihop samtal"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Byt samtal"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Parkera"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Avsluta"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Knappsats"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Koppla ihop samtal"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Växla"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Hantera samtal"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Hantera konferens"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Hantera konf.samtal"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Ljud"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videosamtal"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Byt till röstsamtal"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Byt kamera"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pausa video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Fler alternativ"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Tjänst"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Konfiguration"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Har inte angetts&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"pund"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"ring upp"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backsteg"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Högtalartelefon aktiverad."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Högtalartelefon har valts"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Lur har valts"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Mikrofonlurar med sladd har valts"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth-mikrofonlurar har valts"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Samtalets ljud avstängt."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Ljudet har slagits på för samtalet."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Samtalet har parkerats."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Samtalet är inte längre parkerat."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Svara"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Skicka SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Avvisa"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Svara som videosamtal"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Svara som röstsamtal"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Acceptera videobegäran"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Neka videobegäran"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Dra uppåt för <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Dra åt vänster för <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Dra åt höger för <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Dra nedåt för <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibrera"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibrera"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Ljud"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Standardsignal (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Ringsignal"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Mobilen vibrerar när det ringer"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Knappljud"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Föreslå nummer vid inmatning"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Ringsignal och vibrera"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Hantera konferenssamtal"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Nödsamtalsnummer"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Välj konto"</string>
 </resources>
