--- a/InCallUI/res/values-ta-rIN/strings.xml
+++ b/InCallUI/res/values-ta-rIN/strings.xml
@@ -17,37 +17,18 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"மொபைல்"</string>
+    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"ஃபோன்"</string>
     <string name="onHold" msgid="9035493194749959955">"காத்திருப்பில்"</string>
     <string name="unknown" msgid="6878797917991465859">"தெரியாதவர்"</string>
     <string name="private_num" msgid="6713286113000232309">"தனிப்பட்ட எண்"</string>
     <string name="payphone" msgid="1931775086311769314">"கட்டண மொபைல்"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"லைன் பிஸியாக உள்ளது"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"நெட்வொர்க் பிஸி"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"பதில் இல்லை, நேரம் முடிந்தது"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"சேவையகம் தொடர்பில் இல்லை"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"தொடர்புகொள்ள முடியவில்லை"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"பயனர்பெயர் அல்லது கடவுச்சொல் தவறானது"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"நெட்வொர்க்கிற்கு அப்பாற்பட்ட எல்லையிலிருந்து அழைக்கப்பட்டது"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"சேவையகப் பிழை. பிறகு முயலவும்."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"சிக்னல் இல்லை"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM வரம்பு மீறப்பட்டது"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ரேடியோ முடக்கப்பட்டது"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM இல்லை அல்லது SIM பிழை"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"மொபைல் நெட்வொர்க் இல்லை"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"வெளிச்செல்லும் அழைப்புகள் FDN ஆல் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"அழைப்பு தடுப்பில் இருக்கும்போது பிறரை அழைக்க முடியாது."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"அணுகல் கட்டுப்பாட்டின் மூலம் எல்லா அழைப்புகளும் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"அணுகல் கட்டுப்பாட்டின் மூலம் அவசர அழைப்புகள் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"அணுகல் கட்டுப்பாட்டின் மூலம் இயல்பான அழைப்புகள் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"எண் தவறானது"</string>
     <string name="confCall" msgid="1904840547188336828">"குழு அழைப்பு"</string>
     <string name="call_lost" msgid="317670617901479594">"அழைப்பு முடிந்தது."</string>
     <string name="ok" msgid="3811371167865772377">"சரி"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"ஸ்பீக்கர்"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ஹேண்ட்செட் இயர்ஃபீஸ்"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"வயருடன்கூடிய ஹெட்செட்"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"புளூடூத்"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"பின்வரும் டோன்களை அனுப்பவா?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"டோன்களை அனுப்புகிறது\n"</string>
     <string name="send_button" msgid="4106860097497818751">"அனுப்பு"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"துண்டிக்கிறது"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"அழைப்பில்"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"எனது எண் <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"வீடியோவை இணைக்கிறது"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"வீடியோ அழைப்பு"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"வீடியோவைக் கோருகிறது"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"வீடியோ அழைப்பை இணைக்க முடியவில்லை"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"திருப்பி அழைப்பதற்கான எண்\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"அவசர அழைப்பு எண்\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"அழைக்கிறது"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"தவறிய அழைப்பு"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"தவறிய அழைப்புகள்"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"செயலில் இருக்கும் அழைப்பு"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"காத்திருப்பில்"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"உள்வரும் அழைப்பு"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"உள்வரும் வீடியோ அழைப்பு"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"உள்வரும் வீடியோ கோரிக்கை"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"புதிய குரலஞ்சல்"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"புதிய குரலஞ்சல் (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> ஐ அழை"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"சேவை இல்லை"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"தேர்ந்தெடுத்த நெட்வொர்க் (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) கிடைக்கவில்லை"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"துண்டி"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"வீடியோ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"குரல்"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ஏற்கிறேன்"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"நிராகரி"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"திருப்பி அழை"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"செய்தி"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"அழைப்பதற்கு, முதலில் விமானப் பயன்முறையை முடக்கவும்."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"குழு அழைப்புகளை மேற்கொள்ள முடியவில்லை."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"அழைப்பை நிராகரிக்க முடியவில்லை."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"அழைப்பை(களை) முடிக்க முடியவில்லை."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"குரலஞ்சல் எண் அறியப்படாதது."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"இணைய அழைப்பு"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP அழைப்பு"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"அவசரகால அழைப்பு"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ரேடியோவை இயக்குகிறது…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"சேவை பகுதிக்கு வெளியே உள்ளது, மீண்டும் முயற்சிக்கிறது..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"அழைக்க முடியவில்லை, <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ஆனது அவசரகால எண் அல்ல!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"அழைக்க முடியாது. அவசரகால எண்ணை டயல் செய்யவும்!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"டயல் செய்வதற்கு விசைப்பலகையைப் பயன்படுத்துக"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"அழைப்பை இடைநிறுத்து"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"அழைப்பைத் தொடர்"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"அழைப்பைச் சேர்"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"அழைப்புகளை இணை"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"அழைப்புக்களில் மாறு"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"காத்திரு"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"முடி"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"டயல்பேடு"</string>
@@ -111,13 +108,17 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"அழைப்புகளை இணை"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"மாற்று"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"அழைப்புகளை நிர்வகி"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"குழு அழைப்பை நிர்வகி"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"குழு அழைப்பை நிர்வகி"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ஆடியோ"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"வீடியோ அழைப்பு"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"குரல் அழைப்பிற்கு மாறு"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"கேமராவை மாற்று"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"வீடியோவை இடைநிறுத்து"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"மேலும் விருப்பங்கள்"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"சேவை"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"அமைவு"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;அமைக்கப்படவில்லை&gt;"</string>
-    <string name="other_settings" msgid="3672912580359716394">"பிற அழைப்பு அமைப்புகள்"</string>
+    <string name="other_settings" msgid="3672912580359716394">"பிற அழைப்பு அமைப்பு"</string>
     <string name="calling_via_template" msgid="4839419581866928142">"<xliff:g id="PROVIDER_NAME">%s</xliff:g> வழியாக அழைக்கிறது"</string>
     <string name="incoming_via_template" msgid="1696993226115570960">"<xliff:g id="PROVIDER_NAME">%s</xliff:g> மூலம் உள்வருவது"</string>
     <string name="contactPhoto" msgid="4713193418046639466">"தொடர்பு படம்"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"பவுண்ட்"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"டயல்"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"ஸ்பீக்கர்ஃபோன் இயக்கப்பட்டது."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"ஸ்பீக்கர்போன் தேர்ந்தெடுக்கப்பட்டது"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"இயர்பீஸ் தேர்ந்தெடுக்கப்பட்டது"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"வயர் ஹெட்செட் தேர்ந்தெடுக்கப்பட்டது"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"புளூடூத் ஹெட்செட் தேர்ந்தெடுக்கப்பட்டது"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"அழைப்பு முடக்கப்பட்டது."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"அழைப்பு இயக்கப்பட்டது."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"அழைப்பு இடைநிறுத்தப்பட்டது."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"அழைப்பு மீள் இயக்கப்பட்டது."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"பதிலளி"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS அனுப்பு"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"நிராகரி"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"வீடியோ அழைப்பில் பதிலளி"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ஆடியோ அழைப்பில் பதிலளி"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"வீடியோ கோரிக்கையை அனுமதி"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"வீடியோ கோரிக்கையை நிராகரி"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> க்கு மேலாக நகர்த்தவும்."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> க்கு இடதுபக்கமாக நகர்த்தவும்."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> வலதுபக்கமாக நகர்த்தவும்."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> க்குக் கீழே ஸ்லைடு செய்க."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"அதிர்வு"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"அதிர்வு"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ஒலி"</string>
     <string name="default_notification_description" msgid="78174796906240970">"இயல்பு ஒலி (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"தொலைபேசி ரிங்டோன்"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ரிங் ஆகும்போது அதிர்வை ஏற்படுத்து"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"டயல்பேடு தொடுதலுக்கான டோன்கள்"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"டயல்பேடு தானாக முடித்தல்"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ரிங்டோன் &amp; அதிர்வு"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"குழு அழைப்பை நிர்வகிக்கவும்"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"அவசரகால எண்"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"கணக்கைத் தேர்ந்தெடு"</string>
 </resources>
