--- a/InCallUI/res/values-te-rIN/strings.xml
+++ b/InCallUI/res/values-te-rIN/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"తెలియదు"</string>
     <string name="private_num" msgid="6713286113000232309">"ప్రైవేట్ నంబర్"</string>
     <string name="payphone" msgid="1931775086311769314">"పే ఫోన్"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"లైన్ బిజీగా ఉంది"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"నెట్‌వర్క్ బిజీగా ఉంది"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ప్రతిస్పందన లేదు, సమయం ముగిసింది"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"సర్వర్‌ను చేరుకోవడం సాధ్యపడలేదు"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"నంబర్‌ను చేరుకోవడం సాధ్యపడలేదు"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"చెల్లని వినియోగదారు పేరు లేదా పాస్‌వర్డ్"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"నెట్‌వర్క్ లేని చోటు నుండి కాల్ చేయబడింది"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"సర్వర్ లోపం. తర్వాత మళ్లీ ప్రయత్నించండి."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"సిగ్నల్ లేదు"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM పరిమితి మించిపోయింది"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"రేడియో ఆఫ్‌లో ఉంది"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM లేదు లేదా SIM లోపం"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"మొబైల్ నెట్‌వర్క్ అందుబాటులో లేదు"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN ద్వారా అవుట్‌గోయింగ్ కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"కాల్ బేరింగ్ ఆన్‌లో ఉన్నప్పుడు మీరు అవుట్‌గోయింగ్ కాల్‌లు చేయలేరు."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ప్రాప్యత నియంత్రణ ద్వారా అన్ని కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ప్రాప్యత నియంత్రణ ద్వారా అత్యవసర కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ప్రాప్యత నియంత్రణ ద్వారా సాధారణ కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"నంబర్ చెల్లదు"</string>
     <string name="confCall" msgid="1904840547188336828">"కాన్ఫరెన్స్ కాల్"</string>
     <string name="call_lost" msgid="317670617901479594">"కాల్‌ను కోల్పోయారు."</string>
     <string name="ok" msgid="3811371167865772377">"సరే"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"ముగిస్తోంది"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"కాల్‌లో ఉంది"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"నా నంబర్ <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"వీడియోను కనెక్ట్ చేస్తోంది"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"వీడియో కాల్"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"వీడియో కోసం అభ్యర్థిస్తోంది"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"వీడియో కాల్‌ను కనెక్ట్ చేయడం సాధ్యపడదు"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"మీ కాల్ బ్యాక్ నంబర్\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"మీ అత్యవసర కాల్ బ్యాక్ నంబర్\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"డయల్ చేస్తోంది"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"సమాధానం ఇవ్వని కాల్"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"సమాధానం ఇవ్వని కాల్‌లు"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"కాల్ కొనసాగుతోంది"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"హోల్డ్‌లో ఉంది"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ఇన్‌కమింగ్ కాల్"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ఇన్‌కమింగ్ వీడియో కాల్"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"ఇన్‌కమింగ్ వీడియో అభ్యర్థన"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"కొత్త వాయిస్ మెయిల్"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"కొత్త వాయిస్ మెయిల్ (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>కు డయల్ చేయండి"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"సేవ లేదు"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"ఎంచుకున్న నెట్‌వర్క్ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) అందుబాటులో లేదు"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"కాల్‌ను ముగించు"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"వీడియో"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"వాయిస్"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ఆమోదిస్తున్నాను"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"తీసివేయి"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"తిరిగి కాల్ చేయి"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"సందేశం"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"కాల్ చేయడానికి, మొదట ఎయిర్‌ప్లైన్ మోడ్‌ను ఆపివేయండి."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"కాన్ఫరెన్స్ కాల్‌లు చేయడం సాధ్యపడలేదు."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"కాల్‌ను తిరస్కరించడం సాధ్యపడలేదు."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"కాల్(లు)ను చేయడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"వాయిస్‌మెయిల్ నంబర్ తెలియదు."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"ఇంటర్నెట్ కాల్"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP కాల్"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"అత్యవసర కాల్"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"రేడియోను ప్రారంభిస్తోంది…"</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"సేవా ప్రాంతంలో లేదు, పునఃప్రయత్నిస్తోంది…"</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"కాల్ వెళ్లలేదు. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> అత్యవసర నంబర్ కాదు!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"కాల్ వెళ్లలేదు. అత్యవసర నంబర్‌కు డయల్ చేయండి!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"డయల్ చేయడానికి కీబోర్డ్‌ను ఉపయోగించండి"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"కాల్‌ను హోల్డ్‌లో ఉంచు"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"కాల్‌ను పునఃప్రారంభించు"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"కాల్‌ను జోడించు"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"కాల్‌లను విలీనం చేయి"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"కాల్‌లను మార్చు"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"హోల్డ్ చేయి"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"ముగించు"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"డయల్‌ప్యాడ్"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"కాల్‌లను విలీనం చేయి"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"స్వాప్ చేయి"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"కాల్‌లను నిర్వహించు"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"కాన్ఫరెన్స్‌ను నిర్వహించు"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"సమావేశ కాల్‌ను నిర్వహించు"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ఆడియో"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"వీడియో కాల్"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"వాయిస్ కాల్‌కి మార్చు"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"కెమెరాను మార్చు"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"వీడియోను పాజ్ చేయి"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"మరిన్ని ఎంపికలు"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"సేవ"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"సెటప్"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;సెట్ చేయలేదు&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"పౌండ్"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"డయల్ చేయి"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"స్పీకర్ ఫోన్ ప్రారంభించబడింది."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"స్పీకర్‌ఫోన్ ఎంచుకోబడింది"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ఇయర్‌పీస్ ఎంచుకోబడింది"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"వైర్ గల హెడ్‌సెట్ ఎంచుకోబడింది"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"బ్లూటూత్ హెడ్‌సెట్ ఎంచుకోబడింది"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"కాల్ మ్యూట్ చేయబడింది."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"కాల్ అన్‌మ్యూట్ చేయబడింది."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"కాల్‌ హోల్డ్‌లో ఉంది."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"కాల్ హోల్డ్ నుండి తీసివేయబడింది."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"సమాధానం ఇవ్వండి"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS పంపండి"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"తిరస్కరిస్తున్నాను"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"వీడియో కాల్ రూపంలో సమాధానమివ్వండి"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ఆడియో కాల్ రూపంలో సమాధానమివ్వండి"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"వీడియో అభ్యర్థనను అంగీకరించండి"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"వీడియో అభ్యర్థనను తిరస్కరించండి"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> కోసం పైకి స్లైడ్ చేయండి."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> కోసం ఎడమవైపుకు స్లైడ్ చేయండి."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> కోసం కుడివైపుకు స్లైడ్ చేయండి."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> కోసం క్రిందికి స్లైడ్ చేయండి."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"వైబ్రేట్"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"వైబ్రేట్"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ధ్వని"</string>
     <string name="default_notification_description" msgid="78174796906240970">"డిఫాల్ట్ ధ్వని (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ఫోన్ రింగ్‌టోన్"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"రింగ్ అవుతున్నప్పుడు వైబ్రేట్ చేయి"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"డయల్ ప్యాడ్ టచ్ టోన్‌లు"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"డయల్ ప్యాడ్ స్వీయ పూర్తి"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"రింగ్‌టోన్ &amp; వైబ్రేట్"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"కాన్ఫరెన్స్ కాల్‌ను నిర్వహించండి"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"అత్యవసర నంబర్"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"ఖాతాను ఎంచుకోండి"</string>
 </resources>
