--- a/InCallUI/res/values-vi/strings.xml
+++ b/InCallUI/res/values-vi/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Không xác định"</string>
     <string name="private_num" msgid="6713286113000232309">"Số cá nhân"</string>
     <string name="payphone" msgid="1931775086311769314">"Điện thoại tự động"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Đường dây bận"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Mạng bận"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Không có phản hồi, đã hết thời gian chờ"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Máy chủ không thể truy cập được"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Số không thể truy cập được"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Tên người dùng hoặc mật khẩu không chính xác"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Được gọi từ ngoài mạng"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Lỗi máy chủ. Hãy thử lại sau."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Không có tín hiệu nào"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Đã vượt quá giới hạn ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Tắt radio"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Không có SIM hoặc lỗi SIM"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Không có mạng di động"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Cuộc gọi đi bị hạn chế bởi FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Bạn không thể thực hiện cuộc gọi đi khi đang bật chế độ chặn cuộc gọi."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Tất cả cuộc gọi bị hạn chế bởi kiểm soát truy cập."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Cuộc gọi khẩn cấp bị hạn chế bằng kiểm soát truy cập."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Cuộc gọi thông thường bị hạn chế bởi kiểm soát truy cập."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Số không hợp lệ"</string>
     <string name="confCall" msgid="1904840547188336828">"Cuộc gọi hội nghị"</string>
     <string name="call_lost" msgid="317670617901479594">"Cuộc gọi đã bị mất."</string>
     <string name="ok" msgid="3811371167865772377">"OK"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Kết thúc cuộc gọi"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Đang trong cuộc gọi"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Số điện thoại của tôi là <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Đang kết nối video"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Cuộc gọi điện video"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Đang yêu cầu video"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Không thể kết nối cuộc gọi điện video"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Số gọi lại của bạn\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Số gọi lại khẩn cấp của bạn\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Đang gọi"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Cuộc gọi nhỡ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Cuộc gọi nhỡ"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Cuộc gọi đang thực hiện"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Đang chờ"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Cuộc gọi đến"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Cuộc gọi điện video đến"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Yêu cầu video đến"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Thư thoại mới"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Thư thoại mới (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Quay số <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Không có dịch vụ nào"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Mạng được chọn (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) không khả dụng"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Kết thúc"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Video"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Thoại"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Chấp nhận"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Loại bỏ"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Gọi lại"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Tin nhắn"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Để thực hiện cuộc gọi, trước tiên, hãy tắt chế độ trên Máy bay."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Không thể thực hiện cuộc gọi hội nghị."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Không thể từ chối cuộc gọi."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Không thể thực hiện cuộc gọi."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Số thư thoại không xác định."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Cuộc gọi qua internet"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Cuộc gọi qua SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Cuộc gọi khẩn cấp"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Đang bật radio..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Ngoài vùng dịch vụ, đang thử lại..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Cuộc gọi không được gửi đi. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> không phải là số khẩn cấp!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Cuộc gọi không được gửi đi. Hãy quay số số khẩn cấp!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Sử dụng bàn phím để quay số"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Giữ cuộc gọi"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Tiếp tục cuộc gọi"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Thêm cuộc gọi"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Hợp nhất cuộc gọi"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Hoán đổi cuộc gọi"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Giữ"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Kết thúc"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Bàn phím số"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Hợp nhất cuộc gọi"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Hoán đổi"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Quản lý cuộc gọi"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Quản lý hội nghị"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Quản lý cuộc gọi nhiều bên"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Âm thanh"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"C.gọi video"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Thay đổi thành cuộc gọi thoại"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Chuyển đổi máy ảnh"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Tạm dừng video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Thêm tùy chọn"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Dịch vụ"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Thiết lập"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Chưa được đặt&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"dấu thăng"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"quay số"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"phím lùi"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Đã bật loa ngoài."</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Đã chọn loa ngoài"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Đã chọn loa tai nghe"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Đã chọn tai nghe có dây"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Đã chọn tai nghe Bluetooth"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Đã tắt tiếng cuộc gọi."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Đã bật tiếng cuộc gọi."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Cuộc gọi đã được chuyển sang trạng thái chờ."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Đã hủy chờ cuộc gọi."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Trả lời"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Gửi SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Từ chối"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Trả lời là cuộc gọi điện video"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Trả lời là cuộc gọi âm thanh"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Chấp nhận yêu cầu cuộc gọi video"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Từ chối yêu cầu cuộc gọi video"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Trượt lên để <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Trượt sang trái để <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Trượt sang phải để <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Trượt xuống để <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Rung"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Rung"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Âm thanh"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Âm thanh mặc định (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Nhạc chuông điện thoại"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Rung khi đổ chuông"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Âm chạm bàn phím số"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Tự động hoàn thành bằng bàn phím số"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Nhạc chuông và rung"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Quản lý cuộc gọi hội nghị"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Số khẩn cấp"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Chọn tài khoản"</string>
 </resources>
