--- a/InCallUI/res/values-zh-rCN/strings.xml
+++ b/InCallUI/res/values-zh-rCN/strings.xml
@@ -17,30 +17,11 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"手机"</string>
+    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"电话"</string>
     <string name="onHold" msgid="9035493194749959955">"保持"</string>
     <string name="unknown" msgid="6878797917991465859">"未知"</string>
     <string name="private_num" msgid="6713286113000232309">"私密号码"</string>
     <string name="payphone" msgid="1931775086311769314">"公用电话"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"线路忙"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"网络忙"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"无响应，已超时"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"无法连接到服务器"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"该号码无法拨通"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"用户名或密码错误"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"网外呼叫"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"服务器错误，请稍后再试。"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"无信号"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"超出 ACM 限制"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"已关闭天线"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"无 SIM 卡或 SIM 卡出错"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"没有移动网络"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"外拨电话受固定拨号限制。"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"您无法在已启用通话限制的情况下拨出电话。"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"所有通话都受访问控制限制。"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"急救或报警电话受访问控制限制。"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"正常通话受访问控制限制。"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"号码无效"</string>
     <string name="confCall" msgid="1904840547188336828">"电话会议"</string>
     <string name="call_lost" msgid="317670617901479594">"通话已中断。"</string>
     <string name="ok" msgid="3811371167865772377">"确定"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"正在挂断"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"正在通话"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"我的手机号码：<xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"正在连接视频"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"视频通话"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"正在发出视频请求"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"无法连接视频通话"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"您的回拨号码如下：\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"您的紧急回拨号码：\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"正在拨号"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"未接电话"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"未接电话"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"当前通话"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"保持"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"来电"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"有视频通话来电"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"收到视频通话邀请"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"新语音邮件"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"新语音邮件 (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"拨打 <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"无服务"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"所选网络（<xliff:g id="OPERATOR_NAME">%s</xliff:g>）不可用"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"挂断"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"视频"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"语音"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"接受"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"忽略"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"回拨"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"短信"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"要进行呼叫，请先关闭飞行模式。"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"无法进行电话会议。"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"无法拒绝呼叫。"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"无法挂断。"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"语音信箱号码未知。"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"互联网电话"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP电话"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"紧急呼救"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"正在打开天线..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"不在服务区，正在重试..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"电话未拨出，<xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> 不是紧急呼救号码！"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"电话未拨出，请拨打紧急呼救电话！"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"使用键盘拨号"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"保持通话"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"恢复通话"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"添加通话"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"合并通话"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"切换通话"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"等待"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"挂断"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"拨号键盘"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"合并通话"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"交换"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"管理通话"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"管理会议"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"管理电话会议"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"音频"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"视频通话"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"改为语音通话"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"切换摄像头"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"暂停视频"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"更多选项"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"服务"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"设置"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;未设置&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"英镑"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"拨号"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"Backspace 键"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"扬声器已启用。"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"已选择扬声器"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"已选择手机听筒"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"已选择有线耳机"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"已选择蓝牙耳机"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"通话已静音。"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"通话已取消静音。"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"通话已置于保持状态。"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"通话已解除保持状态。"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"接听"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"发送短信"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"拒绝"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"以视频通话的形式接听"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"以音频通话的形式接听"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"接受视频请求"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"拒绝视频请求"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"向上滑动即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"向左滑动即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"向右滑动即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"向下滑动即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"振动"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"振动"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"提示音"</string>
     <string name="default_notification_description" msgid="78174796906240970">"默认提示音 (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"手机铃声"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"响铃时振动"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"拨号键盘触摸音效"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"拨号键盘自动补全"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"铃声和振动"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"管理电话会议"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"紧急电话号码"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"选择帐户"</string>
 </resources>
