--- a/InCallUI/res/values-zh-rHK/strings.xml
+++ b/InCallUI/res/values-zh-rHK/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"未知"</string>
     <string name="private_num" msgid="6713286113000232309">"私人號碼"</string>
     <string name="payphone" msgid="1931775086311769314">"公共電話"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"忙線"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"網絡忙碌"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"沒有回應，已逾時"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"無法連接伺服器"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"無法撥通的號碼"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"用戶名稱或密碼不正確"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"無法在網外撥號"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"伺服器錯誤，請稍後再試一次。"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"沒有訊號"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"已超過 ACM 上限"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"無線電已關閉"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"沒有 SIM 卡，或是 SIM 卡錯誤"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"無法連線至流動網絡"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"撥出通話受 FDN 限制。"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"啟用通話限制時，無法撥出電話。"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"所有通話都受存取控制限制。"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"緊急通話受存取控制限制。"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"正常通話受存取控制限制。"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"號碼無效"</string>
     <string name="confCall" msgid="1904840547188336828">"視訊會議"</string>
     <string name="call_lost" msgid="317670617901479594">"電話已斷線。"</string>
     <string name="ok" msgid="3811371167865772377">"確定"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"結束通話"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"通話中"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"我的電話號碼：<xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"連結視像"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"視像通話"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"提出視像要求"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"無法連結視像通話"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"您的回撥號碼如下：\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"您的緊急回撥號碼如下：\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"撥號中"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"未接來電"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"未接來電"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"通話中"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"保留通話"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"來電"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"視像通話來電"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"收到視像要求"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"新留言"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"新留言 (<xliff:g id="COUNT">%d</xliff:g> 個)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"撥號 <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"沒有服務"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"您所選取的網絡 (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) 無法使用"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"掛斷"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"影片"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"語音"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"接受"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"關閉"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"回撥"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"短訊"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"請先關閉飛行模式後再撥打電話。"</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"無法進行會議通話"</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"無法拒接來電。"</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"無法結束通話。"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"留言信箱號碼不明。"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"網絡電話"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP 通話"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"緊急電話"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"正在開啟無線電..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"超出服務範圍，正在重試..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"無法撥號，<xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> 不是緊急電話號碼！"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"無法撥號，請撥打緊急電話號碼！"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"使用鍵盤撥號"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"保留通話"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"恢復通話"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"新增通話"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"合併通話"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"切換通話"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"按住"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"結束"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"撥號鍵盤"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"合併通話"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"切換"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"管理通話"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"管理電話會議"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"管理會議通話"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"音頻裝置"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"視像通話"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"變更為語音通話"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"切換相機"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"暫停視像"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"更多選項"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"服務"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"設定"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;未設定&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"井字鍵"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"撥號"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"退格鍵"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"擴音器已啟用"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"已選取免持聽筒"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"已選取聽筒"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"已選取有線耳機"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"已選取藍牙耳機"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"通話已靜音。"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"通話已取消靜音。"</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"通話保留中。"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"已移除保留的通話。"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"接聽"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"發送短訊"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"拒絕"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"接聽視像通話"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"接聽語音通話"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"接受視像通話要求"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"拒絕視像通話要求"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"向上滑動即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"向左滑動即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"向右滑動即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"向下滑動即可<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>。"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"震動"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"震動"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"音效"</string>
     <string name="default_notification_description" msgid="78174796906240970">"預設音效 (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"手機鈴聲"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"鈴響時震動"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"撥號鍵盤音頻"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"撥號鍵盤自動完成"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"鈴聲與震動"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"管理會議通話"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"緊急電話號碼"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"選取帳戶"</string>
 </resources>
