--- a/InCallUI/res/values-zu/strings.xml
+++ b/InCallUI/res/values-zu/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"Akwaziwa"</string>
     <string name="private_num" msgid="6713286113000232309">"Inombolo eyimfihlo"</string>
     <string name="payphone" msgid="1931775086311769314">"Ifoni ekhokhelwayo"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Ulayini umatasa"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Inethiwekhi imatasa"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ayikho impendulo, isikhathi siphelile"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Iseva ayitholakali"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Inombolo ayifinyeleleki"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Igama lomsebenzisi noma iphasiwedi engalungile"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Kushayelwe kwinethiwekhi yangaphandle"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Iphutha leseva. Zama futhi emva kwesikhathi."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ayikho isignali"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Umkhawulo we-ACM ufinyelelwe"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Umsakazo uvaliwe"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ayikho i-SIM, noma iphutha le-SIM"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Inethiwekhi yeselula ayitholakali"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Amakholi aphumayo avinjelwe i-FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Awukwazi ukwenza amakholi aphumayo ngenkathi ukuvimba kuvuliwe."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Wonke amakholi avimbelwa ngesilawuli sokufinyelela."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Amakholi aphuthumayo avinjelwe isilawuli sokufinyelela."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Amakholi avamile avinjelwe ukulawula kokufinyelela."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Inombolo Engalungile"</string>
     <string name="confCall" msgid="1904840547188336828">"Ikholi yengqungquthela"</string>
     <string name="call_lost" msgid="317670617901479594">"Ikholi ikulahlekele."</string>
     <string name="ok" msgid="3811371167865772377">"KULUNGILE"</string>
@@ -65,6 +46,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Iyavala"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Isecingweni"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Inombolo yami ngu <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Ixhuma ividiyo"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Ikholi yevidiyo"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Icela ividiyo"</string>
+    <string name="card_title_video_call_error" msgid="5520555528871673801">"Ayikwazi ukuxhuma ikholi yevidiyo"</string>
+    <string name="card_title_callback_number" msgid="4604563437776874016">"Inombolo yakho yokushayela emuva\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Inombolo yakho yokushayela emuva yesimo esiphuthumayo\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Iyadayela"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Ikholi ekulahlekele"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Amakholi akuphuthele"</string>
@@ -73,6 +60,8 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Ikholi eqhubekayo"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Ibambile"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Ikholi engenayo"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Ikholi yevidiyo engenayo"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Isicelo sevidiyo engenayo"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Umlayezo wezwi omusha"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Umyalezo wezwi omusha (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Dayela <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
@@ -80,6 +69,10 @@
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ayikho isevisi"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Inethiwekhi ekhethiwe <xliff:g id="OPERATOR_NAME">%s</xliff:g> ayitholakali"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Vala ikholi"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Ividiyo"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Izwi"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Yamukela"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Cashisa"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Phinda ushaye"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Umlayezo"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Ukwenza ikholi, vala kuqala imodi Yendiza."</string>
@@ -95,14 +88,18 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Ayikwazi ukwenza amakholi engqungquthela."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Ayikwazi ukwenqaba ikholi."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Ayikwazi ukuyeka ikholi (ama)."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Inombolo yevoyisimeyili ayaziwa."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Ikholi ye-Inthanethi"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Ikholi ye-SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Ikholi ephuthumayo"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Ivula umsakazo..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Indawo engenayo isevisi, iyazama futhi..."</string>
     <string name="dial_emergency_error" msgid="7969515493359619960">"Ikholi ayithunyelwe. I-<xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> akuyona inombolo ephuthumayo!"</string>
     <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Ikholi ayithunyelwanga, sicela udayela inombolo ephuthumayo!"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Sebenzisa ikhibhodi ukudayela"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Bamba ikholi"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Qhubekisa ikholi"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Engeza ikholi"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Hlanganisa amakholi"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Shintsha amakholi"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Bamba"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Qeda"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Iphedi yokudayela"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Hlanganisa amakholi"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Shintsha"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Phatha amakholi"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Phatha umhlangano wezokuxhumana"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Phatha ikholi yenkomfa"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Umsindo"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Ikholi yevidiyo ye-Hangout"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Shintshela kukholi yezwi"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Shintsha ikhamela"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Misa isikhashana ividiyo"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Izinketho eziningi"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Isevisi"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Ukumisa"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Ayisethiwe&gt;"</string>
@@ -140,33 +141,34 @@
     <string name="description_image_button_pound" msgid="1716041284529917866">"iphawundi"</string>
     <string name="description_dial_button" msgid="7459705245418435351">"dayela"</string>
     <string name="description_delete_button" msgid="4015842181592283903">"i-backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Isipikha sefoni sinikwe amandla"</string>
+    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Ifoni yesipikha ikhethiwe"</string>
+    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Isipikha sendlebe sikhethiwe"</string>
+    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Ama-earphone anentambo akhethiwe"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Ama-earphone we-Bluetooth akhethiwe"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Ikholu ithulisiwe"</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Ikholi isuswe ukuthula."</string>
+    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Ikholi ibanjiwe okwesikhashana."</string>
+    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Ikholi isusiwe ekubanjweni okwesikhashana."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Phendula"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Thumela i-SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Nqaba"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Phendula njengekholi yevidiyo"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Phendula njengekholi yomsindo"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Yamukela isicelo sevidiyo"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Yenqaba isicelo sevidiyo"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Slayidela phezulu ku-<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Slayida ngakwesokunxele ku-<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Slayida ngakwesokudla ku-<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Slayida ngezansi ku-<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Dlidliza"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Dlidliza"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Umsindo"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Umsindo ozenzakalelayo (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Ithoni yokukhala kocingo"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Dlidlizisa uma ikhala"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Amathoni okuthinta iphedi yokudayela"</string>
     <string name="dial_pad_autocomplete" msgid="494525952035761075">"Okokudayela kuqedwe ngokuzenzakalela"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Ithoni yokukhala nokudlidliza"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Phatha ucingo lwengqungquthela"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Inombolo yesimo esiphuthumayo"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
+    <string name="select_account_dialog_title" msgid="5730339500156684204">"Khetha i-akhawunti"</string>
 </resources>
